--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,30 +1,31 @@
 ---
-title: 有声｜包括Vice在内的大媒体帮助特鲁多摧毁加拿大民主
+title: 网球名将德约称 坚决反对强制接种疫苗
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2024031/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2024056/)
 
-By:**祕翻新闻**
+作者：银河系农场—骄子
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+当地时间2月15日，据相关媒体报道，网球名将诺瓦克·德约科维奇在接受采访时表示，如果任何赛方以接种中共病毒疫苗作为硬性参赛条件，他宁可放弃获得大满贯的机会。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/截屏2022-02-18-上午2.26.22.png)
+资料显示，德约在职业网球比赛中已经取得了9个冠军，而今年澳大利亚网球公开赛的冠军将带给他新的大满贯赛事冠军纪录。然而，今年1月，拒绝接种中共病毒疫苗的德约科维奇被澳州政府两次取消入境签证，并在法庭挑战失败后被驱逐出境。
 
-**2022-02-18**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/10-23.png)图片来源 真相卫报
-2月18日《真相卫报》综合报道称，加拿大自由卡车司机运动目的很明确：结束中共病毒封锁，特别是给予加拿大人决定其选择权利的自由，而不是被迫进行医疗勒索以换取他们的主要生活需求。但媒体帮助了特鲁多，将卡车司机贴上“肮脏的败类”和“恐怖分子”的标签。
+对此，德约表示，他深知自己目前无法参加世界上的大多数锦标赛，但这是他愿意为自由付出的代价。同时，德约也强调，民众必须保有选择是否接种中共病毒疫苗的权利。而这一言论也得到了塞尔维亚总统武契奇的大力支持。 据悉，德约将于下周在迪拜举行的2022年ATP职业网球巡回赛上重返赛场。
 
-与犯罪、抢劫和纵火事件激增的美国“黑命贵”运动相比，加拿大的卡车抗议活动从开始到现在都相当和平。然而，世界各地的记者、政客和大企业都在反对和抹黑这些为真理和自由发声的人。
+参考链接：[Not anti-vax but won’t be forced to take COVID-19 jab, says Djokovic](https://www.channelnewsasia.com/sport/covid-19-novak-djokovic-not-anti-vax-skip-tournaments-2499226)
 
-大流行病开始之际，曾经诬陷灭共者郭文贵先生的Vice Media 刊登题为《反疫苗者害怕政府会‘强制实施’中共病毒疫苗》 的文章，将社交媒体上的“反中共病毒疫苗的团体称为“阴谋论的疯子”。这些团体声称，病毒将导致强制接种疫苗和无限制的监控。而现在这一切都已经发生了，Vice 并没有道歉，相反，Vice 正在帮助特鲁多抹黑和反击任何抱怨他的人。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen_Shot_2022-02-01_at_11.29.09_PM-1.png)
 
-这是共产独裁暴政的架构，它不仅仅发生在加拿大，它正在美国，甚至全世界发生。
+总编：Irene木木
+编辑：宁文静
+校正/发稿：呼吸的雾霾（文小呼吸）
 
-新闻来源 [**https://thetruedefender.com/how-the-big-media-helped-dictator-justin-trudeau-destroy-canadian-democracy/ **](https://thetruedefender.com/how-the-big-media-helped-dictator-justin-trudeau-destroy-canadian-democracy/)
-
-秘翻新闻 文雀 编译报道
-
-发布 : 恩典
-
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
-
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
