--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,21 +1,29 @@
 ---
-title: 英国外交大臣访问乌克兰期间谈中共责任
+title: 有声｜包括Vice在内的大媒体帮助特鲁多摧毁加拿大民主
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2024000/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2024031/)
 
-撰稿—八木
-校对/上传—无明逆流
+By:**祕翻新闻**
 
-英国外交大臣特拉斯在访问乌克兰基辅期间，谈到中共应该在俄乌局势中起到的作用时表示，“中国和俄罗斯不一样，中国人宣扬他们的不干涉政策。看到中国支持俄罗斯，这实在让人惊讶。”她说，“如果中国想被视作一个负责任的全球参与者，它必须尽其所能，让俄罗斯给西方让步。世界正在观察中国人的行动，看他们是促进和平稳定，还是煽动侵略。”
-![](https://assets.gnews.org/wp-content/uploads/2022/02/W52.09.jpeg)图片资料：（左）特斯拉 （右）库列巴 2月17日 乌克兰基辅 
-**中共无时不刻在支援俄罗斯的侵略政策。**
+**2022-02-18**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/10-23.png)图片来源 真相卫报
+2月18日《真相卫报》综合报道称，加拿大自由卡车司机运动目的很明确：结束中共病毒封锁，特别是给予加拿大人决定其选择权利的自由，而不是被迫进行医疗勒索以换取他们的主要生活需求。但媒体帮助了特鲁多，将卡车司机贴上“肮脏的败类”和“恐怖分子”的标签。
 
-俄罗斯对乌克兰的入侵政策使西方各国暂停了俄罗斯的天然气项目计划。2022年2月，中共无视美国对中共发出的警告，与俄罗斯签订高价巨额石油天然气协议，为俄罗斯缓解危机。
-中共在俄罗斯遭遇危机时，总是第一时间拿中国人的民脂民膏为俄罗斯买单。
+与犯罪、抢劫和纵火事件激增的美国“黑命贵”运动相比，加拿大的卡车抗议活动从开始到现在都相当和平。然而，世界各地的记者、政客和大企业都在反对和抹黑这些为真理和自由发声的人。
 
-在乌克兰问题上，中共发布与俄罗斯的联合声明，更是直接表明态度，支持俄罗斯对乌克兰的入侵政策。
+大流行病开始之际，曾经诬陷灭共者郭文贵先生的Vice Media 刊登题为《反疫苗者害怕政府会‘强制实施’中共病毒疫苗》 的文章，将社交媒体上的“反中共病毒疫苗的团体称为“阴谋论的疯子”。这些团体声称，病毒将导致强制接种疫苗和无限制的监控。而现在这一切都已经发生了，Vice 并没有道歉，相反，Vice 正在帮助特鲁多抹黑和反击任何抱怨他的人。
 
-中共深知俄乌危机解决之后就是中共危机。中共明面上、暗地里运作支援俄罗斯也是因为看到了这一点。在这种情形下，国际社会单一对俄罗斯进行制裁并不能起到实际性作用；在制裁俄罗斯的同时对中共进行制裁，危机才可能真正得以解除。
+这是共产独裁暴政的架构，它不仅仅发生在加拿大，它正在美国，甚至全世界发生。
+
+新闻来源 [**https://thetruedefender.com/how-the-big-media-helped-dictator-justin-trudeau-destroy-canadian-democracy/ **](https://thetruedefender.com/how-the-big-media-helped-dictator-justin-trudeau-destroy-canadian-democracy/)
+
+秘翻新闻 文雀 编译报道
+
+发布 : 恩典
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
+
 
  
 
