--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,30 +1,42 @@
 ---
-title: 有声｜美发布恶名市场名单 微信和全球速卖通上榜
+title: 马斯克暗指推出《紧急状态法》的特鲁多是独裁者
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2023895/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2023913/)
 
-By:**祕翻新闻**
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-**2022-02-18**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-16.png)图片来源 大纪元(USTR报告截图)
-大纪元2月18日报道，美国贸易代表办公室周四发布了最新“恶名市场”年度清单，中共国信息平台微信和阿里巴巴的在线交易平台“全球速卖通”上榜。
+翻译/编辑：文泓
 
-这是一份涉及假冒和盗版行为的市场名单，也是一份包括全球最严重知识产权滥用和仿冒者的年度汇编。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/8-17.png)图片来源：Sportskeeda
 
-2021年“恶名市场”年度清单审查确定了42个在线市场和35个实体市场，这些市场参与或助长了大量商标假冒或版权盗窃行为。
 
-美国贸易代表戴琪在声明中说，“假冒和盗版商品的全球贸易破坏了美国的关键创新和创造力，并伤害了美国工人。”她还指出，“这种非法贸易还增加了对参与制造假冒商品工人的剥削性劳工行为，假冒商品可能对世界各地消费者和工人的健康和安全构成重大风险。”
+据天空新闻2月18日报道，正值特鲁多总理在加拿大历史上首次援引《紧急状态法》扩张政府权力，试图借此阻止自由车队抗议者。特斯拉首席执行官埃隆马斯克发推，将特鲁多与独裁者相提并论。
 
-中共国最大的在线零售商之一拼多多在2019年首次被纳入这份名单。淘宝、百度网盘和敦煌网等中国电子商务服务提供商也仍在2021年度名单上。这份最新名单里还包括位于中共国境内的九个以制造、分销和销售假冒商品而闻名的实体市场，它们分别是：福建省莆田市安福市场，上海亚太新阳服饰礼品市场，广东省广州市站西路附近的一些服装批发市场和钟表城，广东省汕头市澄海区，广东省深圳市的华强北电子商城，深圳罗湖市场，北京秀水市场， 辽宁省沈阳市五爱市场，浙江省义乌市义乌国际商贸城。
+推文中中包括一张德国独裁者的黑白照片，标题是：“别再拿我和贾斯汀·特鲁多相比了，我有一个预算，”推文后被删除。
 
-新闻来源 [**https://www.epochtimes.com/gb/22/2/17/n13585023.htm**](https://www.epochtimes.com/gb/22/2/17/n13585023.htm)
+在加拿大政府要求卡车司机在穿越美加边境之前完全接种疫苗的命令生效后，自由车队抗议活动开始了。数千名愤怒的抗议者驱车前往渥太华，以及两个美加边境口岸，封锁交通、挥舞旗帜，对该国的疫苗强制规定表示愤怒。
 
-秘翻新闻 采集/编辑 二丫
+一直以来马斯克先生都站在卡车司机一边，美国证券交易委员会(SEC)指责他总是直言不讳地批评政府。
 
-发布 : 恩典
+“（世界由）加拿大卡车司机统治”，马斯克先生上个月发推：“但自由被一次又一次地剥夺，直到它消失。”
 
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
+这次特鲁多援引《紧急状态法》，试图阻止数千名愤怒的卡车司机封锁美加边境口岸，阻塞城市并影响供应，以抗议加拿大推出的疫苗强制。
+
+特鲁多周一表示，政府将利用《紧急状态法》解决大卡车运动封锁和占领问题，以“确保加拿大人的安全”。
+
+他告诉记者：“我们不能也不会允许非法和危险的活动继续下去。”
+
+新闻链接：[Elon Musk slammed for comparing Justin Trudeau to Adolf Hitler after invoking emergency powers to end trucker protests | Sky News Australia](https://www.skynews.com.au/world-news/elon-musk-slammed-for-comparing-justin-trudeau-to-adolf-hitler-after-he-invoked-emergency-powers-to-end-trucker-protests/news-story/f29b8db8930ffad4d34120697a94bcd3)
+
+*发布：tianzhihuan*
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
