--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,27 +1,30 @@
 ---
-title: 中日财经爆┃中基协公布新一期名单，又有70家私募机构失联
+title: 有声｜美发布恶名市场名单 微信和全球速卖通上榜
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2023875/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2023895/)
 
-撰稿：东京樱花团/喜马拉雅的微尘
+By:**祕翻新闻**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/中基协公布新一期名单，又有70家私募机构失联.png)[图片来源](https://www.tingkedianzi.com/post/42960.html)
+**2022-02-18**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8-16.png)图片来源 大纪元(USTR报告截图)
+大纪元2月18日报道，美国贸易代表办公室周四发布了最新“恶名市场”年度清单，中共国信息平台微信和阿里巴巴的在线交易平台“全球速卖通”上榜。
 
-近日，中国基金业协会公布了最新一期失联私募机构名单，本次失联私募共计70家，涉及深圳市乐创财富资本管理有限公司、深圳飞马金融控股有限公司、北京正方环球投资管理有限责任公司等。协会通过该70家私募机构在AMBERS系统中登记的方式已无法与其取得有效联系。
+这是一份涉及假冒和盗版行为的市场名单，也是一份包括全球最严重知识产权滥用和仿冒者的年度汇编。
 
-基金业协会的私募失联公示制度从2015年开始实行，此次基金业协会公布的已经是第42批了，这42批加起来，总共有1461家私募疑似失联，726家私募因失联最终注销。
+2021年“恶名市场”年度清单审查确定了42个在线市场和35个实体市场，这些市场参与或助长了大量商标假冒或版权盗窃行为。
 
-在2012年《基金法》修订时，私募基金开始“合法”，与银行、保险、券商、基金、信托、期货，并列为“资管七雄”。虽然对于投资者而言门槛高，但由于私募基金是备案成立的，不需要牌照，因此在初期迎来了一波爆发式增长，一度达到2万多家。
+美国贸易代表戴琪在声明中说，“假冒和盗版商品的全球贸易破坏了美国的关键创新和创造力，并伤害了美国工人。”她还指出，“这种非法贸易还增加了对参与制造假冒商品工人的剥削性劳工行为，假冒商品可能对世界各地消费者和工人的健康和安全构成重大风险。”
 
-投资私募基金高门槛，本来是用于保护投资人的，只放合格投资者入场。当前，中共政治经济形势急剧恶化，除权贵之外所有人都是韭菜，不仅小散被割，百万、千万、上亿级的玩家难逃被割。
+中共国最大的在线零售商之一拼多多在2019年首次被纳入这份名单。淘宝、百度网盘和敦煌网等中国电子商务服务提供商也仍在2021年度名单上。这份最新名单里还包括位于中共国境内的九个以制造、分销和销售假冒商品而闻名的实体市场，它们分别是：福建省莆田市安福市场，上海亚太新阳服饰礼品市场，广东省广州市站西路附近的一些服装批发市场和钟表城，广东省汕头市澄海区，广东省深圳市的华强北电子商城，深圳罗湖市场，北京秀水市场， 辽宁省沈阳市五爱市场，浙江省义乌市义乌国际商贸城。
 
-信息来源：
+新闻来源 [**https://www.epochtimes.com/gb/22/2/17/n13585023.htm**](https://www.epochtimes.com/gb/22/2/17/n13585023.htm)
 
-[伤不起的私募圈：又有70家失联，百亿实控人接连死伤](https://finance.sina.com.cn/money/smjj/smdt/2022-02-18/doc-ikyamrna1353398.shtml)
+秘翻新闻 采集/编辑 二丫
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+发布 : 恩典
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
