--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,25 +1,27 @@
 ---
-title: 围绕中共攻台作战想定 美军在冲绳开展离岛夺岛训练
+title: 中日财经爆┃中基协公布新一期名单，又有70家私募机构失联
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2023870/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2023875/)
 
 撰稿：东京樱花团/喜马拉雅的微尘
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-77.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https://cdn-japantimes.com/wp-content/uploads/2021/05/np_file_86462-870x489.jpeg&amp;imgrefurl=https://www.japantimes.co.jp/news/2021/05/11/national/sdf-us-france-joint-drills/&amp;tbnid=gwz37ubMcqrhhM&amp;vet=12ahUKEwiv_MfQr4j2AhVGx2EKHdbwDvoQMygGegUIARCRAQ..i&amp;docid=bnN0Opcg-r921M&amp;w=870&amp;h=489&amp;q=US%20military%20Okinawa%20military%20training&amp;ved=2ahUKEwiv_MfQr4j2AhVGx2EKHdbwDvoQMygGegUIARCRAQ)
-据日本共同社2月17日消息，美国海军陆战队正在进行新的“远征前进基地作战”（EABO）训练，把冲绳县多个美军设施视为离岛，分散运用小规模部队，主要考虑是中共的军事野心和可能的动作。
 
-这是仅海军陆战队员就有约7500人参加的罕见大规模训练。除在近海和上空有美海军核动力航母等之外，日本航空自卫队的战机也参加了训练。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/中基协公布新一期名单，又有70家私募机构失联.png)[图片来源](https://www.tingkedianzi.com/post/42960.html)
 
-参与策划训练的Phillip·Peacock中校称，“这是旨在迅速应对不测事态和地区危机的演练”，认为会提升支援美海军和自卫队的能力。
+近日，中国基金业协会公布了最新一期失联私募机构名单，本次失联私募共计70家，涉及深圳市乐创财富资本管理有限公司、深圳飞马金融控股有限公司、北京正方环球投资管理有限责任公司等。协会通过该70家私募机构在AMBERS系统中登记的方式已无法与其取得有效联系。
 
-从此次美军训练将冲绳设置为离岛并实施夺岛的作战想定来看，美军应对中共攻台的战术演练已经非常成熟。
+基金业协会的私募失联公示制度从2015年开始实行，此次基金业协会公布的已经是第42批了，这42批加起来，总共有1461家私募疑似失联，726家私募因失联最终注销。
+
+在2012年《基金法》修订时，私募基金开始“合法”，与银行、保险、券商、基金、信托、期货，并列为“资管七雄”。虽然对于投资者而言门槛高，但由于私募基金是备案成立的，不需要牌照，因此在初期迎来了一波爆发式增长，一度达到2万多家。
+
+投资私募基金高门槛，本来是用于保护投资人的，只放合格投资者入场。当前，中共政治经济形势急剧恶化，除权贵之外所有人都是韭菜，不仅小散被割，百万、千万、上亿级的玩家难逃被割。
 
 信息来源：
 
-[独家：美军在冲绳实施将美军设施视为离岛的训练](https://china.kyodonews.net/news/2022/02/8d7cac987583.html)
+[伤不起的私募圈：又有70家失联，百亿实控人接连死伤](https://finance.sina.com.cn/money/smjj/smdt/2022-02-18/doc-ikyamrna1353398.shtml)
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
