--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,29 +1,22 @@
 ---
-title: 中日财经爆┃中共发改委：共同富裕不能靠党要靠自己
+title: 中共修订网络安全审查办法 压制统治风险
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2023866/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2023871/)
 
-撰稿：东京樱花团/喜马拉雅的微尘
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-16.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https://img3.jiemian.com/101/original/20210918/163194343383918700_a640x364.jpg&amp;imgrefurl=https://m.jiemian.com/article/6614048.html&amp;tbnid=EE1H2Gn-Hy8gRM&amp;vet=12ahUKEwjPhNXDmYj2AhUKHqYKHa7YBTgQMygSegUIARDTAQ..i&amp;docid=qBmLmbkC275APM&amp;w=640&amp;h=364&amp;q=%E5%85%B1%E5%90%8C%E5%AF%8C%E8%A3%95&amp;ved=2ahUKEwjPhNXDmYj2AhUKHqYKHa7YBTgQMygSegUIARDTAQ)
-2月17日，中共国家发改委就业司司长哈增友17日在新闻发布会上表示，实现共同富裕要靠共同奋斗，不是“躺平”“等靠要”，也不是政府要搞“福利主义”。
+撰稿—虎眼
+校对/上传—无明逆流
 
-哈增友称，“实现共同富裕目标，首先需要通过共同奋斗把蛋糕做大做好，只有人人参与、人人尽力，才能真正实现人人享有。”
+2月15日，中共国家互联网信息办公室联合十三部门修订发布了《网络安全审查办法》正式施行。
 
-他称，一定要把保障和改善民生建立在经济发展和财力可持续的基础之上，不能好高骛远、吊高胃口，作兑现不了的承诺。即使将来发展更好、财力更雄厚了，也不能提过高的目标、搞过头的保障，坚决防止落入“福利主义”养懒汉的陷阱。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/W02.27.jpeg)图源：图虫
 
-“所谓量力而行，就是要清醒地看到，我国发展水平离发达国家还有很大差距，我们一定要把保障和改善民生建立在经济发展和财力可持续的基础之上。”他称。
+中共以维护网络数据安全、国家安全为由，要求掌握个人用户信息超过100万的网络平台运营者，在赴国外上市时必须向网络安全审查办公室申报网络安全审查；网络平台运营者的数据处理活动也将被纳入网络安全审查。
 
-去年8月17日，中共中央财经委员会第十次会议提出“共同富裕”这个目标，并把“三次分配”作为调节收入分配、实现共同富裕的有效路径。
+此次修订的《网络安全审查办法》是在已经推出施行的国家安全审查制度《数据安全法》的基础上更新修订。
+据中共网信办相关负责人称，《网络安全办法》审查主要集中在对网络平台运营数据及特定网络平台赴国外上市的审查。
 
-中共发改委官员的此番表态说明，中共以不搞“福利主义”为名否定了先前“三次分配”这样的提法，把发改委官员的话翻译成大白话就是“共同富裕不能靠党，要靠自己”。
+此外，中共新修订的网络审查法对审查工作成员、重点评估的安全风险因素进行了扩充。增加了中国证券监督管理委员会作为国家网络安全审查成员，新增了网络安全审查重点中的国家安全风险因素。
 
-信息来源：
-
-[到底该如何实现“共同富裕”？国家发改委这场发布会点明重点](http://www.cnr.cn/news/20220217/t20220217_525743400.shtml)
-
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
