--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,28 +1,25 @@
 ---
-title: 有声｜揭疫苗接种和疫苗护照的幕后推手
+title: 围绕中共攻台作战想定 美军在冲绳开展离岛夺岛训练
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2023849/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2023870/)
 
-By:**秘翻新闻**
+撰稿：东京樱花团/喜马拉雅的微尘
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-77.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https://cdn-japantimes.com/wp-content/uploads/2021/05/np_file_86462-870x489.jpeg&amp;imgrefurl=https://www.japantimes.co.jp/news/2021/05/11/national/sdf-us-france-joint-drills/&amp;tbnid=gwz37ubMcqrhhM&amp;vet=12ahUKEwiv_MfQr4j2AhVGx2EKHdbwDvoQMygGegUIARCRAQ..i&amp;docid=bnN0Opcg-r921M&amp;w=870&amp;h=489&amp;q=US%20military%20Okinawa%20military%20training&amp;ved=2ahUKEwiv_MfQr4j2AhVGx2EKHdbwDvoQMygGegUIARCRAQ)
+据日本共同社2月17日消息，美国海军陆战队正在进行新的“远征前进基地作战”（EABO）训练，把冲绳县多个美军设施视为离岛，分散运用小规模部队，主要考虑是中共的军事野心和可能的动作。
 
-**2022-02-18**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/7-23.png)图片来源 儿童健康保护网站
-据《儿童健康保护网站》2月16日报道，在美国最高法院上个月叫停了拜登政府针对大型私人企业的疫苗强制令后，波音、通用电气和星巴克等公司放弃了实施该强制令的计划。但仍有一些公司无视最高法的这项裁决，它们根据平等就业机会委员会在2020年发布的指导意见，仍继续强迫其员工接种中共病毒新冠疫苗。
+这是仅海军陆战队员就有约7500人参加的罕见大规模训练。除在近海和上空有美海军核动力航母等之外，日本航空自卫队的战机也参加了训练。
 
-这些依旧执行疫苗强制令的公司有一个共同点，那就是都拥有贝莱德和先锋集团这两大股东。贝莱德是全球最大的资产管理公司，截至2021年7月，它拥有超过9.5万亿美元的资产。截至2021年1月，先锋持有超过7万亿美元的资产。
+参与策划训练的Phillip·Peacock中校称，“这是旨在迅速应对不测事态和地区危机的演练”，认为会提升支援美海军和自卫队的能力。
 
-目前还不清楚贝莱德和先锋能在多大程度上左右他们所持股公司的疫苗接种政策。但可以肯定的是，在大多数强迫员工接种疫苗的公司中，这两家投资公司是其前十大股东。这些公司包括黑石、雪佛龙、达美航空、脸书、高盛、谷歌、英特尔、IBM、微软等众多世界知名企业。
+从此次美军训练将冲绳设置为离岛并实施夺岛的作战想定来看，美军应对中共攻台的战术演练已经非常成熟。
 
-此外，贝莱德和先锋还是新冠疫苗制造商辉瑞、莫德纳和强生的前三大股东，这意味着这两家投资巨头将从这些公司飙升的利润和股价中获得巨额暴利。不仅如此，贝莱德和先锋还在开发疫苗护照和数字钱包以及可以跟踪和分配“个人碳配额”技术的科技公司中持有股份。
+信息来源：
 
-新闻来源 [**https://childrenshealthdefense.org/defender/corporate-vaccine-mandates-passports-blackrock-vanguard/**](https://childrenshealthdefense.org/defender/corporate-vaccine-mandates-passports-blackrock-vanguard/)
+[独家：美军在冲绳实施将美军设施视为离岛的训练](https://china.kyodonews.net/news/2022/02/8d7cac987583.html)
 
-秘翻新闻 采集/撰稿 ZZB104
-
-发布 : 恩典
-
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
