--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,21 +1,28 @@
 ---
-title: 2023年G7峰会或在日本群马举行
+title: 有声｜揭疫苗接种和疫苗护照的幕后推手
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2023823/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2023849/)
 
-撰稿：东京樱花团：百花李香
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-33.jpg)[图片来源](https://www.arabnews.com/node/1916191/world)
-2月18日《产经新闻》报道，外务大臣林芳正18日在外务省会见了群马县县长山本一太。山本要求将该县选为明年在日本举行的七国集团首脑会议的举办地。林芳正表示，”将与相关部门和机构协商，作好一切可能的准备，确保其成功。
+By:**秘翻新闻**
 
-政府将在今年6月德国举行七国集团峰会时决定主办城市。 1月，外交部在部内设立了 “2023年七国集团峰会筹备办公室”。收集候选地点的住宿、交通、安全和其它方面的信息。除群马县之外，广岛，名古屋和福冈等城市也已宣布有意主办该峰会。
+**2022-02-18**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/7-23.png)图片来源 儿童健康保护网站
+据《儿童健康保护网站》2月16日报道，在美国最高法院上个月叫停了拜登政府针对大型私人企业的疫苗强制令后，波音、通用电气和星巴克等公司放弃了实施该强制令的计划。但仍有一些公司无视最高法的这项裁决，它们根据平等就业机会委员会在2020年发布的指导意见，仍继续强迫其员工接种中共病毒新冠疫苗。
 
-信息源：
+这些依旧执行疫苗强制令的公司有一个共同点，那就是都拥有贝莱德和先锋集团这两大股东。贝莱德是全球最大的资产管理公司，截至2021年7月，它拥有超过9.5万亿美元的资产。截至2021年1月，先锋持有超过7万亿美元的资产。
 
-[林外相に群馬・山本知事がＧ７サミット開催を要望](https://news.yahoo.co.jp/articles/b928862d39dab33d660a537482e24c5c1bcf9ced#:~:text=%E3%83%88%E3%)
+目前还不清楚贝莱德和先锋能在多大程度上左右他们所持股公司的疫苗接种政策。但可以肯定的是，在大多数强迫员工接种疫苗的公司中，这两家投资公司是其前十大股东。这些公司包括黑石、雪佛龙、达美航空、脸书、高盛、谷歌、英特尔、IBM、微软等众多世界知名企业。
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+此外，贝莱德和先锋还是新冠疫苗制造商辉瑞、莫德纳和强生的前三大股东，这意味着这两家投资巨头将从这些公司飙升的利润和股价中获得巨额暴利。不仅如此，贝莱德和先锋还在开发疫苗护照和数字钱包以及可以跟踪和分配“个人碳配额”技术的科技公司中持有股份。
+
+新闻来源 [**https://childrenshealthdefense.org/defender/corporate-vaccine-mandates-passports-blackrock-vanguard/**](https://childrenshealthdefense.org/defender/corporate-vaccine-mandates-passports-blackrock-vanguard/)
+
+秘翻新闻 采集/撰稿 ZZB104
+
+发布 : 恩典
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
