--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,33 +1,37 @@
 ---
-title: 腾讯微信和阿里巴巴全球速卖通“荣登”美国恶名市场榜
+title: 摩根大通：银行急需全球监管来帮助客户投资加密货币
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2024117/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2024135/)
 
-**作者:  **青衣
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-286.jpg)
-（图片来自网络）
+翻译/编辑：小红帽
 
-因假冒和盗版行为猖獗而臭名昭著的中共国公司，是美国每年度“恶意市场”名单上的“常客”。而今年，腾讯微信和阿里巴巴旗下的“全球速卖通”也首次“荣登”了美国“恶名市场”榜。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/5-27.png)图片来源：路透社
 
-据《美国之音》2月18日报道，美国贸易代表办公室周四（2月17日）公布了2021年“恶名市场”假冒和盗版行为审查结果。中共国的腾讯微信和阿里巴巴旗下的“全球速卖通”（AliExpress）首次被列入“恶名市场”名单。
 
-所谓“恶名市场”，指的是那些参与盗版和商标侵权行为，或者为相关活动提供实质性便利的线上和线下交易平台。
+根据News.bitcoin.com 2月17日报道，摩根大通的一位高管表示，迫切需要一个全球一致的加密货币监管框架，以允许银行能够代表大客户处理加密货币资产。
 
-美国贸易代表戴琪表示，全球假冒和盗版贸易破坏了美国关键的创新和创造活动，伤害了美国工人的利益。戴琪办公室发布的新闻稿引用她的话说：“这种非法贸易增加了参与制造假冒商品的劳工容易受到剥削的风险；假冒商品也对世界各地消费者和工人的健康与安全构成了重大风险。”
+全球投资银行摩根大通的董事总经理兼监管事务主管黛比·托尼斯（Debbie Toennies）周二在国际掉期和衍生品协会举办的活动中谈到了适用于银行的全球加密货币监管问题。
 
-在2021年“恶名市场”名单所确认的从事假冒或侵犯版权，或者为其提供实质性便利的市场中，有42个线上市场和35个线下市场，其中包括首次被列入这个名单的阿里巴巴旗下的全球速卖通（AliExpress），以及微信电商生态系统。美国贸易代表办公室认定，这两家电商为商标侵权活动提供了实质性的便利，符合“恶名市场”的标准。
+托尼斯表示，迫切需要制定新的规则，让银行在代表寻求该资产类别敞口的大客户处理加密资产方面具有确定性。
 
-中共国的线上平台——百度网盘、敦煌网（DHGate）、拼多多、淘宝、以及其它九个设在中共国境内的实体市场，这次再次榜上有名。这些市场涉及假冒产品的制造、分销和销售等多种活动。
+越来越多的大型机构，包括对冲基金，对投资和接触加密资产类别感兴趣。据富国银行称，加密货币已进入“高度采用阶段”。
 
-美国贸易代表办公室从2006年开始，在“特别301报告”中设立了“恶名市场”名单。从2011年2月起，该办公室将“特别301报告”与“恶名市场”名单分别单独发布，以提高公众的关注度，帮助市场运作方和相关政府重视保护知识产权的相关法律，保护美国工商界和美国工人。
+托尼斯注意到一些非常大的参与者已要求摩根大通对冲他们对加密资产的风险敞口。他认为：我们需要一个全球一致的监管框架。重要的是，我们要尽快找到一个解决方案。
 
-每年当这个名单公布后，中共国商务部便会无耻无赖地回应称：非官方，不承认！但今年到目前为止，还没有看到中共国官方对于此事的评论。
+巴塞尔银行监管委员会的全球银行监管机构正在讨论银行处理加密货币资产的规则。去年6月，该委员会提议将加密货币资产分为两组，并根据其对银行的市场、流动性、信贷和运营风险进行监管。然而，最终规则预计至少要到明年才会出台。
 
-新闻链接：
+托尼斯透露，在等待巴塞尔委员会制定适用规则的同时，这家全球投资银行一直在与不同的司法管辖区讨论加密货币资产的“临时处理”问题。
 
-[https://www.voachinese.com/a/ustr-releases-2021-review-of-notorious-markets-for-counterfeiting-and-piracy-20220217/6446272.html?utm\_source=twitter&utm\_medium=social&utm\_campaign=dlvr.it](https://www.voachinese.com/a/ustr-releases-2021-review-of-notorious-markets-for-counterfeiting-and-piracy-20220217/6446272.html?utm_source=twitter&amp;utm_medium=social&amp;utm_campaign=dlvr.it)
+新闻链接：[JPMorgan: Global Regulation Urgently Needed for Banks to Help Clients Invest in Crypto](https://news.bitcoin.com/jpmorgan-global-regulation-urgently-needed-for-banks-to-help-clients-invest-in-crypto/)
 
-* * *
+发布： tianzhihuan
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
