--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,24 +1,22 @@
 ---
-title: 香港疫情失控 医疗系统即将全面崩溃
+title: 美国明州“双子城”放弃中共病毒疫苗强制令
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2024055/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2024057/)
 
-作者：纽约香草山教育部- Noemi
+作者：纽约香草山农场-侠肝义胆
 ![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-当地时间2月16日，据相关媒体消息显示，香港当天通报了超过四千两百起中共病毒新增确诊病例，以及9起新增病毒死亡病例，死亡患者中还包括一名年仅三岁的女童。当地目前等候入院的患者已经高达一万两千人。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/截屏2022-02-18-上午2.26.17.png)
-有报道提及，香港地区当下的疫情传播情况十分复杂，当地医疗系统中已有120多名医护人员确诊感染中共病毒，另有20名医院职员被列为病毒的密切接触者。一位香港医院管理局的经理人在接受采访时指出，这些医护人员的感染途径均为社区或家居感染，加之各大医院患者人数骤增，香港公立医院眼下已经不胜负荷。
+2月15日，据当地媒体报道，美国明尼苏达州的双子城——明尼阿波利斯和圣保罗市——已于2月10日起，放弃在当地执行强制民众接种中共病毒疫苗的紧急行政命令。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/截屏2022-02-18-上午2.26.28.png)
+据悉，双子城曾于今年1月19日宣布实施强制疫苗政策，而在不到一个月的时间里，这两个城市已经确认将不再要求当地民众在出入公共场所时出示中共病毒疫苗的接种证明。
 
-消息人士透露，当地一家医院因急诊室人数爆棚，而不得不在急诊室旁的露天空地上搭起多排帐篷，医护人员只能在露天环境中照料等候就诊或入院的病人。
+报道指出，双子城取消疫苗护照的主要原因在于当地的疫情正在逐步放缓，同时，中共病毒疫苗并没有表现出对奥密克戎变种病毒的防护作用。此外，一些政治领导人也明确表示，中共病毒疫苗的强制政策是对人权的羞辱和对自由的践踏。
 
-对此，香港医院管理局前行政人员表示，在未来一星期内，香港累积的中共病毒感染患者可能超过10万例，或将导致当地医疗系统面临全面崩溃的后果。
-
-参考链接：[香港疫情飙升 再增确诊4285例 万人等入院](https://www.epochtimes.com/gb/22/2/16/n13580922.htm)
+参考链接：[Minneapolis, St. Paul drop vaccine mandates after less than a month](https://www.lifesitenews.com/news/minneapolis-st-paul-drop-vaccine-mandates-after-less-than-a-month/)
 
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen_Shot_2022-02-01_at_11.29.09_PM-1.png)
 
 总编：Irene木木
-编辑：静言
+编辑：飞虹
 校正/发稿：呼吸的雾霾（文小呼吸）
 
 **更多资讯，更多关注**
