--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,10 +1,22 @@
 ---
-title: 2月17日勿忘香港 疫情（图片）
+title: 英国外交大臣访问乌克兰期间谈中共责任
 ---
-`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/2023962/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2024000/)
 
-设计 五月花农场 企鹅
-![](https://assets.gnews.org/wp-content/uploads/2022/02/7FFE59A1-C96C-40E2-B7C1-43CCC452F965.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/02/FE367F94-E621-4808-9C85-44C82357BBFD.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/02/93605936-C856-40E7-A9B5-43016FEA2891.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/02/6047AE06-F3CE-4844-BFC3-A3F5B5B24D59.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/02/ED96CD63-B842-43A6-8C67-3BCDC8311028.jpeg)发布：水涨船高
+撰稿—八木
+校对/上传—无明逆流
+
+英国外交大臣特拉斯在访问乌克兰基辅期间，谈到中共应该在俄乌局势中起到的作用时表示，“中国和俄罗斯不一样，中国人宣扬他们的不干涉政策。看到中国支持俄罗斯，这实在让人惊讶。”她说，“如果中国想被视作一个负责任的全球参与者，它必须尽其所能，让俄罗斯给西方让步。世界正在观察中国人的行动，看他们是促进和平稳定，还是煽动侵略。”
+![](https://assets.gnews.org/wp-content/uploads/2022/02/W52.09.jpeg)图片资料：（左）特斯拉 （右）库列巴 2月17日 乌克兰基辅 
+**中共无时不刻在支援俄罗斯的侵略政策。**
+
+俄罗斯对乌克兰的入侵政策使西方各国暂停了俄罗斯的天然气项目计划。2022年2月，中共无视美国对中共发出的警告，与俄罗斯签订高价巨额石油天然气协议，为俄罗斯缓解危机。
+中共在俄罗斯遭遇危机时，总是第一时间拿中国人的民脂民膏为俄罗斯买单。
+
+在乌克兰问题上，中共发布与俄罗斯的联合声明，更是直接表明态度，支持俄罗斯对乌克兰的入侵政策。
+
+中共深知俄乌危机解决之后就是中共危机。中共明面上、暗地里运作支援俄罗斯也是因为看到了这一点。在这种情形下，国际社会单一对俄罗斯进行制裁并不能起到实际性作用；在制裁俄罗斯的同时对中共进行制裁，危机才可能真正得以解除。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
