--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,42 +1,30 @@
 ---
-title: 马斯克暗指推出《紧急状态法》的特鲁多是独裁者
+title: 有声｜江苏省将成立调查组全面调查“锁链女”事件
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2023913/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2023922/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
+By:**祕翻新闻**
 
-翻译/编辑：文泓
+**2022-02-18**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/9-21.png)图片来源 网络
+综合陆媒消息，2月17日，中共国内各媒体均发布消息称，江苏省委省政府决定成立调查组，对“丰县生育八孩女子”事件进行全面调查，彻底查明事实真相，对有关违法犯罪行为依法严惩，对有关责任人员严肃追责，结果及时向社会公布。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/8-17.png)图片来源：Sportskeeda
+在江苏徐州当局对“锁链女”事件的调查结果先后进行了四次口径不一、漏洞百出的公告后，社会各界对中共政府的公信力表示高度怀疑。这期间，网络不断爆出近似“锁链女”真实身份的信息，却遭中共当局忽视与压制，这引发了各界人士声援“锁链女”的愤慨和行动。
 
+在一浪高过一浪为“锁链女”的呐喊声中，甚至有学者和法律人士发声谴责对此事件保持沉默的妇联组织，而习近平夫人彭丽媛任全国妇联执委。在中共的独裁体制里，剑指习近平家人的发声能够堂而皇之地出现在社交平台上，可见“锁链女”事件的发酵态势已超出了普通民众所能看到的声援表象。
 
-据天空新闻2月18日报道，正值特鲁多总理在加拿大历史上首次援引《紧急状态法》扩张政府权力，试图借此阻止自由车队抗议者。特斯拉首席执行官埃隆马斯克发推，将特鲁多与独裁者相提并论。
+在此背景下，中共各大媒体以通稿报道江苏省决定全面调查“锁链女”事件的消息。那么，中共当局的第五次调查结果又是怎样的呢？我们拭目以待。
 
-推文中中包括一张德国独裁者的黑白照片，标题是：“别再拿我和贾斯汀·特鲁多相比了，我有一个预算，”推文后被删除。
+新闻来源 [**https://www.sogou.com/link?url=DSOYnZeCC\_of1jB9gcg5jpYGYxoYcr7tACAm2VOoIXPY5NDazspUUnqjpSIIg4qYWc-lxzwQVeHTO13urmeXqg..
+https://media.discordapp.net/attachments/895315867368312852/943890505891192862/WeChat\_20220217205252.mp4**](https://www.sogou.com/link?url=DSOYnZeCC_of1jB9gcg5jpYGYxoYcr7tACAm2VOoIXPY5NDazspUUnqjpSIIg4qYWc-lxzwQVeHTO13urmeXqg..
+https://media.discordapp.net/attachments/895315867368312852/943890505891192862/WeChat_20220217205252.mp4)
 
-在加拿大政府要求卡车司机在穿越美加边境之前完全接种疫苗的命令生效后，自由车队抗议活动开始了。数千名愤怒的抗议者驱车前往渥太华，以及两个美加边境口岸，封锁交通、挥舞旗帜，对该国的疫苗强制规定表示愤怒。
+秘翻新闻 菜园子112、Julia编辑报道
 
-一直以来马斯克先生都站在卡车司机一边，美国证券交易委员会(SEC)指责他总是直言不讳地批评政府。
+发布 : 恩典
 
-“（世界由）加拿大卡车司机统治”，马斯克先生上个月发推：“但自由被一次又一次地剥夺，直到它消失。”
-
-这次特鲁多援引《紧急状态法》，试图阻止数千名愤怒的卡车司机封锁美加边境口岸，阻塞城市并影响供应，以抗议加拿大推出的疫苗强制。
-
-特鲁多周一表示，政府将利用《紧急状态法》解决大卡车运动封锁和占领问题，以“确保加拿大人的安全”。
-
-他告诉记者：“我们不能也不会允许非法和危险的活动继续下去。”
-
-新闻链接：[Elon Musk slammed for comparing Justin Trudeau to Adolf Hitler after invoking emergency powers to end trucker protests | Sky News Australia](https://www.skynews.com.au/world-news/elon-musk-slammed-for-comparing-justin-trudeau-to-adolf-hitler-after-he-invoked-emergency-powers-to-end-trucker-protests/news-story/f29b8db8930ffad4d34120697a94bcd3)
-
-*发布：tianzhihuan*
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
