--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,28 +1,10 @@
 ---
-title: 研究证实伊维菌素治疗新冠奥米炕的效果最佳
+title: 铁链女 冬奥会 彭帅（图片）
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2023898/)
+`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/2023914/)
 
-#### 翻译/撰稿：zzballack
-
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-34.jpg)图片来源：卫报
-据《儿童健康保护网站》（Children’s Health Defense）2月16日报道，根据康奈尔大学预印版网站刊登的一篇论文，研究人员使用计算分析方法来评估10种药物对新冠奥米炕变种的表现，数据显示伊维菌素的效果最好。
-
-研究人员发现奥米炕病毒的突变并没有明显影响药物和病毒主要蛋白酶之间的相互作用。这10种药物对奥米炕都有一定程度的疗效，但伊维菌素是最有效的。其它测试药物包括由辉瑞公司开发的防新冠口服药Paxlovid，该药在去年12月获得了美国食品药品监管局（FDA）的紧急使用授权，每个疗程花费529美元。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-7.jpg)
-伊维菌素通过抑制病毒复制来降低病毒载量，单一剂量的伊维菌素可以在48小时内杀死99.8%的病毒。预防性使用可使新冠感染率降低86%、加速病人康复、防止器官受损、降低住院和死亡的风险。分析显示，伊维菌素可使死亡率降低75%至83%。此外，在暴露于新冠病毒之前或之后服用该药能防止新冠的传播，早期治疗可以降低人们患上新冠长期症状的风险。这些证据清楚地表明伊维菌素可以完全消除这种大流行病，而且一个疗程仅需要48至95美元。
-
-在贫瘠的非洲，新冠感染人数、重症患者人数、住院人数和死亡人数都低于世界其他地区，这可能是由于非洲有许多人使用伊维菌素治疗新冠以及河盲症，全球99%以上的河盲症患者生活在31个非洲国家。印度北方邦在广泛使用伊维菌素后，新冠患者的康复率高达98.6%，感染人数几乎清零。日本的一项研究表明，在医生被允许合法地给病人开伊维菌素后，短短12天过后新冠病例显著下降。
-
-尽管伊维菌素在治疗新冠上是如此的有效，但自新冠大流行开始以来，主流媒体、公共卫生专家、政府机构、大药厂、科学界一直在阻止人们使用伊维菌素和羟氯喹等药物预防和治疗新冠，并对有关信息进行了史无前例的审查和打压，导致许多人无辜丧生。这是对人类的大屠杀，对这些杀手及其共犯的审判一定会来！
-
-新闻来源：
-
-[Ivermectin Beats Out 9 Other Meds for Treating Omicron, Study Confirms](https://childrenshealthdefense.org/defender/ivermectin-beats-meds-treating-omicron/)
-
-[Insights from a computational analysis of the SARS-CoV-2 Omicron variant: Host-pathogen interaction, pathogenicity and possible therapeutics](https://arxiv.org/abs/2201.08176v1)
-
+设计：五月花农场 水涨船高
+![](https://assets.gnews.org/wp-content/uploads/2022/02/F588BDBA-FCBB-4B38-81CD-ED6CAFA3EB37-scaled.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/02/A2F66ED3-ADD0-4A32-9AD9-3180A1BB3EE9.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/02/B8F04C23-A4F0-46A7-A835-E4DC8D1465E4.jpeg)发布：水涨船高
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
