--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,21 +1,26 @@
 ---
-title: 中共修订网络安全审查办法 压制统治风险
+title: 深化军事合作  日英共同研发战机发动机和传感器
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2023871/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2023887/)
 
-撰稿—虎眼
-校对/上传—无明逆流
+撰稿：东京樱花团/喜马拉雅的微尘
 
-2月15日，中共国家互联网信息办公室联合十三部门修订发布了《网络安全审查办法》正式施行。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/深化军事合作-日英共同研发战机发动机和传感器.png)[图片来源](https://sldinfo.com/2019/11/japan-u-k-bilateral-exercise-vigilant-isles/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/W02.27.jpeg)图源：图虫
+据日本共同社消息，英国国防部2月15日宣布，将与日本共同开发战机用的传感器技术。同时，两国还将共同研发战机发动机，进一步深化防卫领域合作。
 
-中共以维护网络数据安全、国家安全为由，要求掌握个人用户信息超过100万的网络平台运营者，在赴国外上市时必须向网络安全审查办公室申报网络安全审查；网络平台运营者的数据处理活动也将被纳入网络安全审查。
+据英国政府称，共同开发的是被称为“Jaguar”的最尖端传感器技术，旨在针对敌方的威胁提升陆海空的探测能力。计划今年4月在英国北部苏格兰等地启动开发，设计和制造预计为5年时间，将有民营企业共同参与。
 
-此次修订的《网络安全审查办法》是在已经推出施行的国家安全审查制度《数据安全法》的基础上更新修订。
-据中共网信办相关负责人称，《网络安全办法》审查主要集中在对网络平台运营数据及特定网络平台赴国外上市的审查。
+对于发动机合作，防卫省2021年12月透露称，围绕日本航空自卫队F-2战机的后续机型，将从今年1月起与英国进行发动机的共同开发。
 
-此外，中共新修订的网络审查法对审查工作成员、重点评估的安全风险因素进行了扩充。增加了中国证券监督管理委员会作为国家网络安全审查成员，新增了网络安全审查重点中的国家安全风险因素。
+信息来源：
+
+[日英将就战机传感器技术开展共同研究](https://china.kyodonews.net/news/2022/02/1fad74166015.html)
+
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
 
  
 
