--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,50 +1,29 @@
 ---
-title: 经济崩塌和全人类面临威胁世界崩溃之下都会找中共算账
+title: 中日财经爆┃中共发改委：共同富裕不能靠党要靠自己
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2023828/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2023866/)
 
-G-TV视频链接：[https://gtv.org/video/id=620e60e62403672096ab61da](https://gtv.org/video/id=620e60e62403672096ab61da)
+撰稿：东京樱花团/喜马拉雅的微尘
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-16.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https://img3.jiemian.com/101/original/20210918/163194343383918700_a640x364.jpg&amp;imgrefurl=https://m.jiemian.com/article/6614048.html&amp;tbnid=EE1H2Gn-Hy8gRM&amp;vet=12ahUKEwjPhNXDmYj2AhUKHqYKHa7YBTgQMygSegUIARDTAQ..i&amp;docid=qBmLmbkC275APM&amp;w=640&amp;h=364&amp;q=%E5%85%B1%E5%90%8C%E5%AF%8C%E8%A3%95&amp;ved=2ahUKEwjPhNXDmYj2AhUKHqYKHa7YBTgQMygSegUIARDTAQ)
+2月17日，中共国家发改委就业司司长哈增友17日在新闻发布会上表示，实现共同富裕要靠共同奋斗，不是“躺平”“等靠要”，也不是政府要搞“福利主义”。
 
-**摘要：**美国经济这样，世界经济会好吗？能好吗？所以最后的结论：经济崩塌，人类面对健康、恐惧的威胁，世界的整个贸易、供应链大崩溃，最后都会找共产党算账。
+哈增友称，“实现共同富裕目标，首先需要通过共同奋斗把蛋糕做大做好，只有人人参与、人人尽力，才能真正实现人人享有。”
 
-**标签：**威胁,美国经济,新中国联邦,爆料革命,郭文贵先生,
+他称，一定要把保障和改善民生建立在经济发展和财力可持续的基础之上，不能好高骛远、吊高胃口，作兑现不了的承诺。即使将来发展更好、财力更雄厚了，也不能提过高的目标、搞过头的保障，坚决防止落入“福利主义”养懒汉的陷阱。
 
-**正文：**
+“所谓量力而行，就是要清醒地看到，我国发展水平离发达国家还有很大差距，我们一定要把保障和改善民生建立在经济发展和财力可持续的基础之上。”他称。
 
-**郭文贵先生：**所以说战友们，大家看到美国经济这样的时候，你们要想一想，我们未来到底该怎么面对这个2022年水虎年，这个郝海东兄弟启动的水年，今年就是水虎年，上来就流水。水虎年对每个人的挑战。你问问小新她在没有得病毒之前和得了病毒以后的感受是啥样的。我半夜醒来我先看小新的信息，我就怕收到了小新，就像当年飞飞一样，哇噻！那个一旦要听到一嗓子那真的我也受不了。因为咱们已经成兄弟姐妹，像一家人一样，这种关心是控制不住的，就你没办法想，就你就怕小新……你一听小新好了，“哎呀”这心里就踏实了，就觉得特别舒服啊，就像天上多个太阳一样，你要想到怕小新说“我不行了”，你想想你都活不了。小新最有感受，我们每个人都面临这样的威胁，当你有病的时候你会孤独地在一个房子里边，你多需要一个温柔的手来帮帮你，多需要有点热乎乎的饭呐。
+去年8月17日，中共中央财经委员会第十次会议提出“共同富裕”这个目标，并把“三次分配”作为调节收入分配、实现共同富裕的有效路径。
 
-可是你知道每个人都面临这样威胁的时候，你还有钱搞金融、搞经济吗？小新那会儿“老娘就想活着，你们扯什么淡、搞什么经济啊”？罗伊说“小新，给你写个情书‘我爱你’”，你得噘他八辈祖宗，“老娘在垂死挣扎中，你还给我写情书，你个王八蛋”。没有健康、没有未来，怎么会有爱，怎么会有经济！
+中共发改委官员的此番表态说明，中共以不搞“福利主义”为名否定了先前“三次分配”这样的提法，把发改委官员的话翻译成大白话就是“共同富裕不能靠党，要靠自己”。
 
-说到这儿的时候你觉得美国经济会好、世界经济会好吗？能好吗？所以最后的结论：经济的崩塌，人类面对着健康、恐惧的威胁，世界的整个贸易、供应链大崩溃，最后都会找共产党算账。
+信息来源：
 
-字幕来源：[2022月2日6日 《文贵大直播》全文字版](https://gnews.org/zh-hans/1971450/)
+[到底该如何实现“共同富裕”？国家发改委这场发布会点明重点](http://www.cnr.cn/news/20220217/t20220217_525743400.shtml)
 
-编辑整理：Davis；
-
-字幕文件制作：知津；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ)、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A)、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/)、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/)；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
