--- a/gnews/37.md
+++ b/gnews/37.md
@@ -1,30 +1,23 @@
 ---
-title: 以色列即将取消，疫苗绿色通行证
+title: 狮城快讯：疫苗和安全管理措施 估计避免8000人死亡？
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2023015/)
+`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/2023679/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
+**撰稿：Eva**
 
-整理/编辑：小鱼儿
-![](https://assets.gnews.org/wp-content/uploads/2022/02/截圖-2022-02-02-下午10.11.59-13.png)
-当地时间2月18日，据俄罗斯电台（RT）报道，总理纳夫塔利·贝内特（Naftali Bennett）周四宣布，“今天早些时候，我与卫生部长和其他官员进行了讨论，我们将停止使用绿色通行证，”并补充说，“未来几天”将放宽更多限制。总理称，新冠病毒感染人数下降，是取消限制的理由。
+据联合早报的报道，新加坡针对冠病疫情推出的公共卫生措施，以及为全国人口接种疫苗的努力，成功地将去年8月至12月的冠病死亡人数减少约8000人。
 
-在过去一年的大部分时间里，通行证系统要求以色列人，出示疫苗接种证明才能进入一长串室内公共场所，包括酒吧、酒店、餐馆、健身房甚至礼拜场所。
+卫生部2月17日的网站快照显示，在 533,425 例病例中，有930人死亡。这意味着所有年龄段的感染者的存活率约为99.83%。生存机会非常高。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/11-22.png)
+高疫苗接种率是否会导致这种结果？
 
-援引耶路撒冷邮报，虽然绿色通行证将在 3 月 1 日之前完全淘汰，但进入疗养院和其他高风险场所的人，仍需进行病毒检测。
+让我们回到早报说的“去年8月至12月”之前的7月31日，这一天，我们共有37人死亡和64,981例病例，这相当于 99.94% 的存活率。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/22-6.png)
+让我们再回到疫苗推出前，2020年12月30日。这一天，我们共有29 人死亡和58,629例病例，这相当于 99.95% 的存活率。甚至更好的结果！我们世界一流的医疗系统应该为保持低死亡率而受到称赞。尽管如此，我们应该认识到，剩下的 545 万人口没有受到病毒的伤害。换句话说，我们的人口足够健康，自身免疫力可以抵抗病毒。
 
-政府取消疫苗通行证的决定，是在数千人涌入耶路撒冷，要求结束新冠限制几天后做出的。示威者称，这一行动为类似于最近几周，在加拿大看到的“自由车队” ，有些人甚至挥舞着加拿大国旗。
-
-参考新闻：[Israel scrapping Covid vaccine ‘green pass’](https://www.rt.com/news/549779-israel-ending-vaccine-green-pass/)
-
-发布：tianzhihuan
-
-更多资讯，请关注：**
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+把以上数据汇总，清楚可见去年8月到12月存活率，比7月之前的减少了万分之11.74.
+![](https://assets.gnews.org/wp-content/uploads/2022/02/33-2.png)
+那么早报，可以请教下你的估算来源吗？相关财政预算增加190万，就是让你们这样估计的吗？
 
  
 
