--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,28 +1,22 @@
 ---
-title: 有声｜恒大危机延伸到足球队 球员薪资降幅高达88％
+title: 俄罗斯驱逐美国驻莫斯科大使馆副馆长
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2024082/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2024095/)
 
-By:**祕翻新聞**
+编译：花岗岩
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-285.jpg)
+图片来源：网络截图
 
-**2022-02-18**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/11-23.png)图片来源 聯合報
-综合媒体2月18日消息，广州足球俱乐部16日发布《足球俱乐部球员定编及薪资标准》，文件制定了该俱乐部球员的编制和薪资方案，人员薪酬水平与两年前俱乐部恒大足校培养球员的薪资标准相比，新赛季广州队一线队球员起薪线从年薪人民币9.6万元降至6万元，主力球员的封顶年薪从人民币500万元大幅降至60万元，降幅高达88%。
+据合众国际社2月17日报道，美国国务院周四证实，俄罗斯驱逐了美国驻莫斯科大使馆代理大使巴特·戈尔曼（Bart Gorman）。
 
-与此同时，广州足球俱乐部16日发布公告称，与五名归化球员艾克森、高拉特、阿兰、洛国富和费南多终止合约。
+据外交专家（Diplopundit）网站报道，戈尔曼和他的家人于2月10日离开莫斯科，但原因尚未公开。2017年至2019年，戈尔曼在洪博培大使离职后担任俄罗斯大使馆的代理大使。2020年1月约翰·沙利文（John Sullivan）担任领导职务时，他担任了副手。
 
-在恒大集团正陷入财务困境状态下，随着归化球员的解约，舆论预计，未来可能还会有一波高薪球员离队。
+据自由欧洲电台（Radio Free Europe/RadioLiberty）报道，美国国务院发言人说：“俄罗斯对我国代理大使的行动是没有正当理由的，我们认为这是升级的一步，我们正在考虑回应。”
 
-新闻来源 [**https://udn.com/news/story/7333/6105849
-http://finance.eastmoney.com/a/202202172280649629.html**](https://udn.com/news/story/7333/6105849
-http://finance.eastmoney.com/a/202202172280649629.html)
+此举是在美国和北约继续批评克里姆林宫在俄乌边境集结13万多军队，称其为入侵该国的借口。俄罗斯一再拒绝，甚至嘲笑美国官员对可能入侵乌克兰发出的警报。
 
-秘翻新闻 明澈 编辑报道
+新闻来源：[Russia expels deputy chief of U.S. embassy in Moscow](https://www.upi.com/Top_News/World-News/2022/02/17/Bart-Gorman-expelled-US-embassy-Moscow/1971645114573/)
 
-发布 : 恩典
-
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
