--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,31 +1,28 @@
 ---
-title: 美国明州“双子城”放弃中共病毒疫苗强制令
+title: 有声｜恒大危机延伸到足球队 球员薪资降幅高达88％
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2024057/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2024082/)
 
-作者：纽约香草山农场-侠肝义胆
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-2月15日，据当地媒体报道，美国明尼苏达州的双子城——明尼阿波利斯和圣保罗市——已于2月10日起，放弃在当地执行强制民众接种中共病毒疫苗的紧急行政命令。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/截屏2022-02-18-上午2.26.28.png)
-据悉，双子城曾于今年1月19日宣布实施强制疫苗政策，而在不到一个月的时间里，这两个城市已经确认将不再要求当地民众在出入公共场所时出示中共病毒疫苗的接种证明。
+By:**祕翻新聞**
 
-报道指出，双子城取消疫苗护照的主要原因在于当地的疫情正在逐步放缓，同时，中共病毒疫苗并没有表现出对奥密克戎变种病毒的防护作用。此外，一些政治领导人也明确表示，中共病毒疫苗的强制政策是对人权的羞辱和对自由的践踏。
+**2022-02-18**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/11-23.png)图片来源 聯合報
+综合媒体2月18日消息，广州足球俱乐部16日发布《足球俱乐部球员定编及薪资标准》，文件制定了该俱乐部球员的编制和薪资方案，人员薪酬水平与两年前俱乐部恒大足校培养球员的薪资标准相比，新赛季广州队一线队球员起薪线从年薪人民币9.6万元降至6万元，主力球员的封顶年薪从人民币500万元大幅降至60万元，降幅高达88%。
 
-参考链接：[Minneapolis, St. Paul drop vaccine mandates after less than a month](https://www.lifesitenews.com/news/minneapolis-st-paul-drop-vaccine-mandates-after-less-than-a-month/)
+与此同时，广州足球俱乐部16日发布公告称，与五名归化球员艾克森、高拉特、阿兰、洛国富和费南多终止合约。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen_Shot_2022-02-01_at_11.29.09_PM-1.png)
+在恒大集团正陷入财务困境状态下，随着归化球员的解约，舆论预计，未来可能还会有一波高薪球员离队。
 
-总编：Irene木木
-编辑：飞虹
-校正/发稿：呼吸的雾霾（文小呼吸）
+新闻来源 [**https://udn.com/news/story/7333/6105849
+http://finance.eastmoney.com/a/202202172280649629.html**](https://udn.com/news/story/7333/6105849
+http://finance.eastmoney.com/a/202202172280649629.html)
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+秘翻新闻 明澈 编辑报道
+
+发布 : 恩典
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
