--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥个人破产的意义
+title: 法律的重要，西方的伟大
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2027503/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2027547/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
