--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 王保安一个人非法批复国家公路建设款1.2万亿
+title: 韩正状态极差
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2027382/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2027406/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
