--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 俄罗斯人有卫生
+title: 俄乌文化和利益的问题
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2027675/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2027798/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
