--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,7 +1,7 @@
 ---
-title: 法律的重要，西方的伟大
+title: 东北都没有俄罗斯的猪圈好 (1)
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2027547/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2027655/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
