--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 世界的政治是利益第一
+title: 共产党造人工毒雪
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2028059/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2028092/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
