--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,7 +1,7 @@
 ---
-title: 普京玩一箭三雕之计
+title: 中国人在苏联面前永远是输家
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2027925/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2028038/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
