--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,7 +1,7 @@
 ---
-title: 新中国联邦为谁准备
+title: 新中国联邦为谁准备（二）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2028194/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2028336/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
