--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 中共对台行动将暂缓
+title: 台湾证明了法律、民主、人权的价值
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2028802/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2028873/)
 
 台灣寶島農場
 
