--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 政府不应箝制言论自由，也不应滥权阻止抗议
+title: 个人权利和自由是如此重要
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2028887/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2029034/)
 
 台灣寶島農場
 
