--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 20220206文贵大直播:参加冬奥会的国家元首DNA、运动员的DNA，都被共产党掌握
+title: 20220206文贵大直播：今年新中国联邦三件好事分别对应火和土运 所以红色的旗帜大可使用
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2029378/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2029494/)
 
 作者：东京樱花团视频小组
 
@@ -16,7 +16,7 @@ title: 20220206文贵大直播:参加冬奥会的国家元首DNA、运动员的D
 编辑发布：东京樱花团视频小组
 
 * * *
-![喜马拉雅东京樱花团](https://assets.gnews.org/wp-content/uploads/2022/02/yht-8.jpg)喜马拉雅东京樱花团
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-5.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
