--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 20220204文贵大直播：喜联储、喜币是游戏的制定者
+title: 20220204文贵大直播：北京冬奥开幕式是中共新噩梦的开始
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030054/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030189/)
 
 作者：东京樱花团视频小组
 
