--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,7 +1,7 @@
 ---
-title: 20220204文贵大直播：喜支付将有多种币可支付
+title: 20220204文贵大直播:冬奥会拿钱请人都不来，共产党彻底毁掉了中华民族！
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2029807/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2029979/)
 
 作者：东京樱花团视频小组
 
