--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 20220204文贵大直播：喜联储、喜币是游戏的制定者
+title: 20220204文贵大直播：PayPal FaceBook股价跌和我们HPay、Gettr没关系
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030054/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030089/)
 
 作者：东京樱花团视频小组
 
