--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 20220204文贵大直播：北京冬奥开幕式是中共新噩梦的开始
+title: 20220202文贵大直播：HPay成功上线是七哥与战友隔空取钱的开始
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030189/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030386/)
 
 作者：东京樱花团视频小组
 
