--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 20220202文贵大直播：甜蜜蜜运动使中共冬奥会变成冬眠会
+title: 20220202文贵大直播：H-PAY给用户的是最干净直接的信和用没有任何中间商
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030278/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030319/)
 
 作者：东京樱花团视频小组
 
