--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 20220202文贵大直播：Hpay是人类无条件支付的本能！
+title: 20220202文贵大直播：HPay的上线战友们要做的三件事
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030387/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030422/)
 
 作者：东京樱花团视频小组
 
