--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 20220202文贵大直播：大力推广HPay将为您带来无限权益
+title: 20220202文贵大直播：Hpay是人类无条件支付的本能！
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030355/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030387/)
 
 作者：东京樱花团视频小组
 
