--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,7 +1,7 @@
 ---
-title: 20220202文贵大直播：甜蜜蜜运动使中共冬奥会变成冬眠会
+title: 20220202文贵大直播：春晚的本质（一）
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030278/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030404/)
 
 作者：东京樱花团视频小组
 
