--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 20220201文贵大直播：共产党年年办一场充斥着各种假恶丑的春晚
+title: 20220131文贵大直播：爆料革命战友为了救人卖了两亿只假疫苗
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030612/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030716/)
 
 作者：东京樱花团视频小组
 
