--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,15 +1,23 @@
 ---
-title: 破产申请是遵循法律依据
+title: 大直播后记——韩正状态很不好
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2030784/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2030796/)
 
-整理：文晋、sadhu
-编辑：朝花夕拾
+整理：Miles Sun、奋斗
+编辑：Kelly
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/JV4_5ME01ZG_5LC@60.png)图片来源：墨尔本雅典娜农场计组
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/JV4_5ME01ZG_5LC@60.png)图片来源：雅典娜设计组（614）
 
 
-还有一个最关键是什么？ 兄弟姐妹们，这个申请完破产以后，我们到法庭上我们更有独立的，让法官知道我们为什么申请个人破产，过去的几年七哥被陷害。这对于破产法官来讲，你去想想看看。这个事实在这全摆着呢。其实几个案子，多少被陷害？ 刘延平来美国，就是咱把案子从那个法庭移到这个法庭，完全是个心情，所以战友们一定要学到，这个不是开玩笑的，你一定要了解美国的法律，了解你所在国的法律，这是特别特别重要的。 你说七哥每天吃什么喝什么都是全世界公开的，我拥有的什么都是全世界公开。任何一个战友都比你七哥有钱。所以说，兄弟姐妹们这次的破产案，我很多话还不能说。 因为这个刚才已经来告诉我了，不要在直播中谈那么多破产，我不能喊你们可以谈啊！这个让大家要学到法律是多重要。法律是太重要了。这就是西方和中国的不同。 你们想,我在中国那不知道多少罪弄到我头上去了是吧？ 秒间让你消失在人间，是吧？ 这就是真正的西方的伟大。 你可以有这些法律程序，你可以用法律正义来保护你自己的安全，你自己的利益。 这是我们在西方永远要学到的。 你看看那帮孙子路大脑袋郭宝胜还得意呢，他都不知道他噩梦已经到来，他还不知道。还有一个就是老说我们没钱没人，就像共产党老说美国没钱，美国帝国主义，你不要去美国不就完了吗？特别说共产党，美国那么坏，你要把你们儿女私生子女送到美国干什么？ 就像新中国联邦是骗子，是一帮疯子邪教。你别来不就完了吗？ 别参加不就完了吗？是不是，你说哪有一个不要脸 的人个天天去骂一个比自己过得好的人。碍你什么事儿呢？ 你不去不就完了嘛？碍你个蛋的事儿，你不要来不就好，你不看不就完了，你干嘛看呢？谢谢。
+头两天，有人见了韩正说，都傻了。他说，韩正这个人锻炼、生活方式，是中央里最好的人，（这次见了）韩正是言不由衷、神不守舍，而且状态特别不好。他老婆老说他口臭，说他最近口臭，这个医生正在调（理），口臭，她说你别挨他那么近，口臭啊。
+
+这是上海的老同志回来后跟我说的，他说韩正状态不好，一提习，（就说）不要谈政治啊，咱们就谈谈上海的这些生活的事。就把韩正吓成这个样子。可见整个中共到了什么地步。
+
+说实话，这是我们新中国联邦最希望有的感觉。今年（共产党）千万别倒啊，再给我们点时间，让世界把所有的事儿都整明白，新中国联邦有能力影响下一届，咱们真正的民选总统，现在这个时候还真没准备好，他死太早真不行。就像路大脑袋、蛇妖闫、九指妖，这帮孙子今天进监狱，绝对不好玩。
+
+昨天木兰发信息给我说，郭宝胜那个高兴，说：“我在郭文贵破产名单上有1000万。”战友们，我现在想毁谁，我一定把谁加名单上，很简单，我把谁加名单上，你都得面对官司，你都得拿律师费，你必须得到法庭来，郭宝胜不准备50万美元想逃过这个劫是不可能的。1000万你想拿到，肯定绝对千分之一机会都没有，千亿分之一的机会都没有。但是你准备好几十万美金的律师费上法庭是必须的，而且你必须上庭，（郭保胜）就是这种愚蠢的猪。
+
+资料来源：郭先生GTV和盖特直播视频
 
 *发布：tianzhihuan*
 
