--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,7 +1,7 @@
 ---
-title: 20220201文贵大直播：中国绝对分高、中、低三等人，也说明了人心开启的不易
+title: 20220131文贵大直播：爆料革命战友为了救人卖了两亿只假疫苗
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030689/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030716/)
 
 作者：东京樱花团视频小组
 
