--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,22 +1,18 @@
 ---
-title: 20220131文贵大直播：盖特VISION将要上线绝对是划时代的
+title: 美欧政府已经放任集体感染 预计十几亿人将因疫苗死亡
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030684/)
+`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/2030695/)
 
-作者：东京樱花团视频小组
+疫苗灾难下，有科学家已经透露，预计将有十几亿人会因为疫苗而死亡。
 
+美欧政府已经放任集体感染，政府解除疫苗护照的原因：1.经济撑不住了，2.政治撑不住了，3. 病毒有减缓迹象。
 
+冠状病毒还没结束，郭文贵先生再发警告，22年5月前，战友们务必要小心。
 
+视频来源: 20220218—郭先生大直播
+视频制作: 文星光，梦田
+文案:文星光
 
-
-
-
-校对：东京樱花团视频小组
-
-编辑发布：东京樱花团视频小组
-
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-1.jpg)喜马拉雅东京樱花团
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
