--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,22 +1,16 @@
 ---
-title: 20220131文贵大直播： HPAY上线后 打通了十二经与六脉俄罗斯 乌克兰流通最大第二是日本
+title: 渥太华的一名卡车司机问他是否会离开自由车队。请听他充满勇气、决心和韧性的回答。人们觉得他们要捍卫的东西比要失去的东西更多
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030658/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030688/)
 
 作者：东京樱花团视频小组
-
-
-
-
-
-
 
 校对：东京樱花团视频小组
 
 编辑发布：东京樱花团视频小组
 
 * * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-1.jpg)喜马拉雅东京樱花团
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
