--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,37 +1,42 @@
 ---
-title: 大直播后记：在中共国，真话是它的毒药
+title: 《冬眠会》
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2030562/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2030600/)
 
-**整理：**流氓兔、枫叶红了
-**编辑：**舞指如歌
+作者—爱战神
+校对/上传—无明逆流
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/JV4_5ME01ZG_5LC@60.png)雅典娜设计组
+![](https://assets.gnews.org/wp-content/uploads/2022/02/screenshoteasy-9.png)图片来源：网络
 
+甲：彭彭引颈高歌吟，我爱塞北人造雪
+乙：包子终圆纳粹梦，世界老大茫然懵
+丙：冬眠会上耷脑袋，臃肿两层衣防弹
+丁：丢丑
 
-国内很多人的家人，叫他不要打疫苗的时候（他们的）这种无知，我可以告诉大家，我真的是很无奈，包括我的家人、我的朋友。
+甲：七哥大唱假雪歌，吓得彭彭不敢歌
+乙：夫唱夫随秀恩爱，权力双双登顶峰
+丙：跪天求地蓝金黄，讨债要饭才肯来
+丁：撒币
 
-这就是共产党，把教育给你彻底的控制。控制了教育，人说你是猪就是猪，说是狗就是狗；再一个就是让你没信仰，叫你信共产主义，爹亲娘亲不如党亲——我就是神，无神论我党就是神。
+甲：普京千亿九小时，中共毁约愤怒起
+乙：人造假雪祸千年，普帝不忍来呵斥
+丙：保镖染毒死三个，盘古阻击头头死
+丁：乱
 
-你看，“东方红太阳升，中国出了个毛泽东，他为人民呼啊嗨，他是人民大救星”，他不是神了嘛？但是他叫无神论。就中国人这种逻辑，就是他没想过无神的党，怎么说毛泽东是呼啊嗨，东方出了个大救星呢？然后是毛泽东万岁，万岁万万岁，你是人你怎么能万岁，万岁万万岁呢？
+甲：三十国家穷小弟，可怜兮兮把习舔
+乙：羊进狼窝关着宰，善待佳肴是面包
+丙：可怜楚楚运动员，痛哭控诉中共行
+丁：损
 
-全人类（人权）倒数第4的国家，就是所谓的中国人权。全世界造假，98%是中国人干的。全世界（中共政府）三公消费一万多亿，是全人类三公消费的总和。全中国的政府官员房子，是老百姓给的，这叫无产阶级共产党。全中国医疗全部不免费，但是政府却免费的，（这就是）共产党。
+甲：中共运动员猛秀，雌雄莫辨怎双修
+乙：中共皆是假恶丑，一切全是假大空
+丙：贻笑大方天下扬，不以为耻反为荣
+丁：没脸
 
-就这些常识他们都不问，从来不问。所以说Bunny你给这人说话你能说什么？你基本上在跟一个——就是已经完全精神不正常的一帮人说话，他不可能理解你的话，他最接受不了的就是你说真话。不管对他好对他坏，只要你说真话，他都是接受不了的。因为在中共国的这种教育和信仰背景下，真话是它的毒药。
-
-你可以告诉一个人，说你绑架人家的女儿和老婆是不对的，他一定说你疯了，这哪是你管的事啊？你有什么权力管，是吧？如果你要说你打人是不对的，（他说）你有什么本事来管？你算老几？你记住，你在大街上，你看到任何人打一个人的时候，只要你上去拉，一定你会得到三句话：你算老几？你凭什么管？找死啊？三句话等着你，中国人的本能逻辑。
-
-你想想在台湾，你试试，（如果）有人去打我的司机，追寻自由的人一定会问你的，说你凭什么打他？他不会回复你说，你找死啊，他一定心中有怯意，知道这有人在管。（中共国）就是一个没有正义的社会，所有人都是疯子，也不接受真相。
-
-**资料来源：**郭文贵先生2022年2月16日文贵大直播视频
-
-*发布：翼族*
-
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+甲：爆料革命来揭露，习神里外不是人
+乙：中共冬眠巳冻死，永做恶梦遥无期
+丙：消灭中共恶魔鬼，唯有克星郭文贵
+丁：七哥
 
  
 
