--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,17 +1,17 @@
 ---
-title: “9066号行政令”颁布80周年 拜登哈里斯寄言
+title: 高能警惕！中共变异株疫苗来了，保证药到命除
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2030451/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2030470/)
 
-撰稿：东京樱花团｜麗子
-![](https://assets.gnews.org/wp-content/uploads/2022/02/pasted-image-0-8.png)[*图片来源*](https://blog.goo.ne.jp/chiku39/e/90a1fff8050104c42123adb3fde19b89)
-18日，史密森尼美国历史博物馆等组织举行了一个在线活动，以纪念第9066号行政命令颁布80周年，该命令导致了二战期间对美国境内日裔的监禁。副总统哈里斯称该政策“可耻，是对美国核心价值观的背叛”。
+撰稿：东京樱花团｜知了知了
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1779.png)[*图片来源*](http://china.hani.co.kr/arti/international/9895.html)
+2月19日下午，中共国务院联防联控机制举行新闻发布会。会上疫苗研发专班专家组成员邵一鸣介绍，中共病毒（新冠病毒Covid-19）疫苗全程接种能够显著降低奥密克戎变异株引发肺炎和重症的风险，加强免疫则不仅能降低肺炎和重症风险，还能一定程度降低奥密克戎变异株引起的突破感染率。
 
-第四代日裔美国人、总统副助理埃里卡-莫里茨格代表拜登总统传达，一个伟大的国家决不能对其惨痛事件视而不见，监禁的历史是种族主义悲剧的一个明显例子，我们必须继续与仇恨作斗争。
+邵一鸣还介绍，中共国已部署疫苗研发单位开展奥密克戎变异株疫苗研发。一是开展了奥密克戎株的灭活疫苗研究，目前临床前研究已完成；二是开展了针对奥密克戎株的广谱或多价重组蛋白疫苗研究；三是开展了针对奥密克戎株的腺病毒载体疫苗和核酸疫苗研发工作；上述各类疫苗研究工作，进展较快的均已向药品审评中心提交临床试验申报资料。这意味着，变异株疫苗接种即将全面开启。
 
-珍珠港偷袭直接导致当时罗斯福总统签署了9066号行政令，合法将约12万居住在美国太平洋沿岸的日裔美国人集中囚禁。如今，中共用生化病毒偷袭世界，“3F”美国，真相大白之日，美国又岂能置若罔闻！战友们一定要努力传播真相，让西方人真正区分中共不代表中国，中共不等于中国人。祈祷永远不会有下一个“9066行政令”。
+中共打着“为你好”的名义准备了大型疫苗套餐，灭活疫苗、重组蛋白疫苗、腺病毒载体疫苗、核酸疫苗，一次性满足你对疫苗的所有渴望，保证打伤你、打残你、打死你，药到命除，还不快领旨谢恩！
 
-信息来源：[**副大統領「米の価値観裏切った」日系人収容80年**](https://news.yahoo.co.jp/articles/42b9c3c119c76b771231836f2cb55fd4269670a0)
+信息来源：[**我国已部署疫苗研发单位开展奥密克戎变异株疫苗研发**](https://china.huanqiu.com/article/46sfD6b5mXB)
 
 *校对：东京樱花团/東洋武士*
 *发布：东京樱花团/tdownc2p*
