--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,37 +1,21 @@
 ---
-title: 马里兰州夫妇承认向外国政府出售核潜艇机密
+title: 习近平面临的问题层出不穷 近期同时做了脾和肾的手术
 ---
-`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2030895/)
+`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/2030950/)
 
-素材整理：波士顿五月花 Vicky
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-19-at-7.57.58-PM.png)图片来源：互联网
-**一名美国海军工程师的妻子被指控协助其丈夫将核动力潜艇机密向国外出售。**
+锁链女事件发生地，30年来有近万名无名女尸被发现。该事件也引发了江、胡、习派的问责纠纷，对习家影响巨大，并且引起世界对中共国女性人权的批判。
 
-**46岁的戴安娜-托比（Diana Toebbe），曾是一名教师，根据她与联邦检察官达成的认罪协议，她将在监狱中度过不超过三年。**
+彭帅事件，引发了国内外体育界，明星界对共产党高层的极度不满。
 
-**她的丈夫乔纳森-托比（Jonathan Toebbe），42岁，本周早些时候认罪。**
+冬奥谷爱凌事件，香港疫情大爆发，普京乌克兰争端。习近平面临的问题层出不穷。
 
-**根据他的认罪协议，他将被判处约12-17年的刑期。**
+不但如此，统计局内部信息透露，冬奥会花了近600亿，涉及所谓的援助2000多亿，并且党内以冬奥、国际战略等名义往国外疯狂洗钱，各地方政府也极尽所能骗中央的钱。
 
-**托比夫妇都在西弗吉尼亚州马丁斯堡的联邦法院承认了密谋传播限制性数据的罪名。**
+习近平四面楚歌，近期同时做了脾和肾的手术。
 
-**乔纳森-托比是潜艇核动力系统方面的专家，这是国家最严密的机密之一。**
-
-**据司法部称，他试图将这些信息卖给外国政府，向他认为是外国官员的人发送信息。事实上，这名外国官员是一名卧底的联邦调查局特工。**
-
-**这类案件的认罪求情协议虽然属于不同寻常，但它们有可能达成。法律专家说，联邦调查员对这类案件非常重视，他们可能愿意支持对被告人的较轻判决，以换取他们的信息。**
-
-**纽约哥伦比亚大学法律教授丹尼尔-里奇曼（Daniel Richman）说，有时，”检察官会放弃对被告的最高刑罚，以便让他们说出可能有助于他们反间谍行动的事情”。**
-
-**在这个案件中，调查人员希望从被告那里找到一些东西。根据联邦调查员起草的宣誓书，乔纳森-托比曾要求以加密货币支付10万美元，以换取核机密。**
-
-**作为认罪协议的一部分，托比夫妇表示，他们将帮助联邦调查局收回在导致他们被捕的联邦调查期间寄给他们的加密货币。**
-
-参考链接：[Maryland couple plead guilty in nuclear secrets plot](https://www.bbc.com/news/world-us-canada-60442225)
-
-* * *
-
-*编辑&发布：Vicky*
+视频来源: 20220218—郭先生大直播
+视频制作: 文星光，梦田
+文案:文星光
 
  
 
