--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,23 +1,34 @@
 ---
-title: 大直播后记——韩正状态很不好
+title: 一起中共间谍涉嫌走私军事装备背后的阴谋
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2030796/)
+`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/2030852/)
 
-整理：Miles Sun、奋斗
-编辑：Kelly
+#### **【雅典娜观察】和您一起洞察世界**
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/JV4_5ME01ZG_5LC@60.png)图片来源：雅典娜设计组（614）
+翻译/编辑：文泓
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/3-53.png)
 
 
-头两天，有人见了韩正说，都傻了。他说，韩正这个人锻炼、生活方式，是中央里最好的人，（这次见了）韩正是言不由衷、神不守舍，而且状态特别不好。他老婆老说他口臭，说他最近口臭，这个医生正在调（理），口臭，她说你别挨他那么近，口臭啊。
+本周，澳大利亚议会被中共国有影响力指控案件所困扰。周五，昆士兰地方法院审理了64岁的华裔黄金海岸会计师Kim李博伟和63岁的俄罗斯裔布里斯班企业家亚历山大·谢尔被指控违反了澳大利亚《国防贸易管制法》。
 
-这是上海的老同志回来后跟我说的，他说韩正状态不好，一提习，（就说）不要谈政治啊，咱们就谈谈上海的这些生活的事。就把韩正吓成这个样子。可见整个中共到了什么地步。
+多方消息来源称，指控源于澳大利亚安全情报组织（ASIO）对一个在澳运作的中共间谍网络的更广泛调查。**早在****2016****年****8****月，澳大利亚官员拦截了一架由澳洲赌场组织的、从黄金海岸飞往新西兰的不寻常的私人飞机航班，就发现了这个网络的成员。**
 
-说实话，这是我们新中国联邦最希望有的感觉。今年（共产党）千万别倒啊，再给我们点时间，让世界把所有的事儿都整明白，新中国联邦有能力影响下一届，咱们真正的民选总统，现在这个时候还真没准备好，他死太早真不行。就像路大脑袋、蛇妖闫、九指妖，这帮孙子今天进监狱，绝对不好玩。
+李先生是该航班上的六名乘客之一。其他乘客包括习近平主席的表弟齐明、墨尔本有组织犯罪头目和赌场旅行团经营者号称唐人街先生周九明，以及另一个被怀疑与中国情报部门有关的人物。
 
-昨天木兰发信息给我说，郭宝胜那个高兴，说：“我在郭文贵破产名单上有1000万。”战友们，我现在想毁谁，我一定把谁加名单上，很简单，我把谁加名单上，你都得面对官司，你都得拿律师费，你必须得到法庭来，郭宝胜不准备50万美元想逃过这个劫是不可能的。1000万你想拿到，肯定绝对千分之一机会都没有，千亿分之一的机会都没有。但是你准备好几十万美金的律师费上法庭是必须的，而且你必须上庭，（郭保胜）就是这种愚蠢的猪。
+由于齐明与习家的关系，以及他与墨尔本的中国犯罪人物和中共特工的关系，而且齐明曾为中兴通讯工作，该公司与中国军工综合体的关系有案可查，ASIO对齐特别关注。
 
-资料来源：郭先生GTV和盖特直播视频
+布里斯班地方法院周五听取了李博伟和谢尔被指控与另一名中国公民和前墨尔本商人布莱恩·陈合作，**陈现在躲在海外，是国际刑警组织红色通报的对象。**
+
+ASIO消息人士称，**布莱恩·陈是第一个在澳大利亚被揭发的中共情报嫌疑人员，在****2019****年底也被多家澳洲媒体列入调查的一部分，并公布了陈先生曾试图渗透到澳大利亚议会的指控。**这些报道详细介绍了ASIO的一名线人声称，陈先生曾试图通过扶植维多利亚州自由党成员赵波成为议员，从而在联邦议会安插一名间谍。
+
+2019年，陈成为ASIO强烈关注的对象。在此之前，他住在墨尔本，经营着几家企业。他还被列为几家香港和中国大陆公司的董事和股东，与中国军事采购业有很深的关系。
+
+然而，赵波于2019年3月意外死亡，此前他告诉ASIO官员，陈先生曾向他提供100万澳元，供他竞选联邦议会席位。ASIO官员于2019年3月在墨尔本机场询问了陈先生，但他随后被允许离开澳大利亚。
+
+作为对这些披露的回应，ASIO局长迈克·伯吉斯发表了一份公开声明，称其目前正在“认真对待”有关涉嫌干预阴谋的指控。
+
+新闻链接：[Alexander Cher, Brian Chen accused of smuggling military equipment by AFP (smh.com.au)](https://www.smh.com.au/national/afp-uncovers-suspected-chinese-spy-s-alleged-plot-to-smuggle-military-equipment-20220218-p59xld.html)
 
 *发布：tianzhihuan*
 
