--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,28 +1,42 @@
 ---
-title: 大直播后记：七哥谈乌克兰与俄罗斯
+title: 为什么我们不调查运动员猝死的激增？
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2030756/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2030793/)
 
-整理：Miles Sun、Ghope
-编辑：Sadhu
+**编译： Jenny Ball**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip为什么我们不调查运动员猝死的激增？.png)图片来源：childrenshealthdefense.org
+故事概览：
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/JV4_5ME01ZG_5LC@60.png)图片来源：墨尔本雅典娜农场设计组
+- 英国足球传奇人物和体育评论员马特·勒蒂西尔（Matt Le Tissier）一直在谈论大量运动员在球场上倒下或死亡，并因此失去工作。
 
 
-七哥：我大概是在11、12岁之后，破处之前，我都有虱子， 破处的那一年后就没虱子了，以后走上江湖，就到处洗澡了。现在的中国人到处都是虱子，好不好？ 现在的中国人到处都是虱子，好不好？ 人家怎么不说你是脏臭呢？ 我跟你讲，俄罗斯人在乌克兰身上，你看到乌克兰的美女，你看看中国人到乌克兰嫖美女去，是个人都去嫖美女去，乌克兰跟日本一样，就是最希望不要被中国男人给嫖。后来整个明斯克协议就是所谓的，就是你要属于欧洲是吗？ 它本来属于苏联的，你不要把接受加入欧洲，让欧洲把武器布在你的领土上，我就不打你。就像微蓝和小seven离婚了，是吧？ 微蓝说，你只要别再娶新媳妇，咱俩就不打。 然后小seven说，小福利，你只要别有男朋友咱俩就不掐是吧？ 现在是乌克兰明斯克协议，现在乌克兰说我要有女朋友了，我要结婚啊， 跟欧洲结婚。 普京说那我就揍你了。 普京揍他是对的，在法理上，因为明斯克协议说好的你不能嫁人，我也不收拾你。你嫁人了，我就可以揍你，这里边有2个问题文化和利益的问题。 乌克兰当年是所有的前苏联导弹，大飞机，大运输机，大型坦克重点的将近是核心的军事技术，全在乌克兰。你没去过基辅，没有去乌克兰，你谈乌克兰，说你们真的觉得你就是个傻 子一样，你到了这个地方，你会发现这个地方，人是太漂亮了。他们太会生活了，他为啥在 二战的时候造出这么多大飞机大炮出来？这苏联这老 毛 子跟中国中国人不是一个级别的就。但是就是生活上意志上身体上技能上精神上文化上，就人那乌克兰吃完饭人家穿得咔咔咔，那跳舞啪啪那跳，这晃的就是让你觉得浑身就根本就不行了。这是吃牛油的问题吗？ 就是人家那咔咔咔咔就那跳一直跳两三个小时，小孩给你跳，她就这么跳，弄得你就热血膨胀，啥事抓耳挠腮就是，真的是那会儿就想双修。你知道吗？  然后精神错乱，只看裤腰带以下，你就没啥看的了，眼睛都慌了，这还了得了是吧？ 就你冷静不了。就是你每天晚上都能兴奋这个两三个小时。 哇塞，人家这人长得好，你穿那个衣裳，人家那女孩拖着人家的内裤，人家都是那自己拿针缝的，那棉的带边儿的，对不起啊，这暴露了我这没少看了，就是发现人家那儿像咱们中国人，内裤都是那个什么肉皮色的，化纤的，就是人家那女孩的内裤都是那带边边的啊，都好看的不得了，人家很在乎穿，人家指甲修的，脚指甲修的。
+勒蒂西尔表示，他踢足球的 17 年里，从未见过这样的事情——他呼吁对这些事件进行调查，并表示，无视这些是官员们的“严重失职”。
 
-咱们中国人恨不得一年都不剪一次，脚指甲都带钩了，是吧？ 都是泥里边那脚指甲呢，都可以种花了啊，你就跟人家不是一个段落。
+- 事实核查人员和政府官员，正试图否定或抹黑支持这种理论的信息，即 mRNA 注射是造成伤害和突然死亡的原因，他们故意无视对这些指控的调查。
+- 疫苗不良事件报告系统 (VAERS)，仅仅反映普通人群中运动员的受伤情况，但这些突然死亡的报告可能远未发布。
 
-资料来源：[2022年2月16日 文贵大直播](https://gettr.com/streaming/ptgw8b5f32)
 
-*发布：tianzhihuan*
+随着时间的推移，因 COVID mRNA 注射而遭受悲惨后果的人的名单越来越长。
 
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+其中许多人和他们的故事一直被掩盖在公众视野之外。YouTube、Instagram、Facebook 和其他社交媒体平台已经审查掉了记录他们受伤和永久性残疾的个人故事和视频，因此，那些只阅读主流媒体的人并没有意识到以科学的名义造成的巨大破坏。
+
+然而，有一部分人的伤亡情况已被公开。在过去的六个月里，一大批专业和业余运动员在赛场上倒下身亡。然而，主流媒体似乎从容应对，表现得好像正在发生的事情是完全正常的。
+
+但是，正如马特·勒蒂西尔在视频的前几秒中所描述的，这远非正常。马特·勒蒂西尔是一位足球传奇人物。在离开这项运动成为体育评论员之前，他在球场上的实力为他赢得了“乐神”的绰号，最近一次是在天空体育。
+
+正如他在采访中所描述的那样，他失去了这份工作，因为他大声疾呼，并引起人们对世界各地专业和业余运动员发生的大量无法解释的心源性猝死的关注。
+
+“我希望有人调查一下。我们可以回顾过去 15 年或 20 年……看看 10 年前发生了多少次猝死，再看看去年又发生了多少次。我一直在看很多体育赛事和很多关于足球的报道，我从来没有见过这样的事情，因为人群中的紧急情况，比赛而被打断的数量之高。”
+
+**新闻来源**：[childrenshealthdefense.org][Why Aren’t We Investigating Surge in Sudden Deaths of Athletes?](https://childrenshealthdefense.org/defender/surge-sudden-deaths-athletes/?utm_source=salsa&amp;eType=EmailBlastContent&amp;eId=f435bd0c-985a-4c45-a627-5d4df1da646b)
+
+* * *
+
+***审核：文乐
+校对：花羽
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
 
  
 
