--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,45 +1,24 @@
 ---
-title: 郭先生发布“解救八孩女”悬赏次日,中共政府宣布重启该案调查
+title: 破产申请是遵循法律依据
 ---
-`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2030755/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2030784/)
 
-作者：纽约香草山农场教育部-—Noemi
+整理：文晋、sadhu
+编辑：朝花夕拾
 
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-40.png)
-
-
-2022年2月17日中午，中共江苏省委省政府突发通告称：决定立即成立“丰县八孩女子”事件的行动调查组，并向公众承诺会彻底查明事实真相。而就在该公告发出的前一晚，郭文贵先生在大直播节目中发布了一则有关“解救八孩女的”悬赏。此次，中共政府紧急发布的这一通告也许就与郭先生的这则悬赏相关。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/131-1-1.jpg)
-据了解，目前已有很多墙内同胞都自发到达该事件的发生地——中共徐州市，并在当地冒着生命危险为“解救八孩女”一事勇敢发声。郭先生知悉此事后就面向公众再次发出了一则悬赏。郭先生称，在未来，这些敢于为“八孩女”事件发声、发推的正义人士，都将会获得一千乃至一万个不等的喜币奖励。而在该悬赏发出后的不到十二小时里，中共政府就突然成立了一个江苏省级的行动调查组，并声称会彻底查明事实真相，严惩该案件的违法犯罪行为，对有关责任人员进行严肃追责，还会将最终的调查结果及时公布于众。
-
-有盖特网友对此评论称，中共政府此次对于“八孩女”事件的态度急转弯则再次体现出了我们新中国联邦、爆料革命的正义力量。
-
-参考来源：
-
-[https://gtv.org/video/id=620cf40c432ae869226d8db5](https://gtv.org/video/id=620cf40c432ae869226d8db5)
-
-[https://www.gettr.com/post/pv0tis1617](https://www.gettr.com/post/pv0tis1617)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-42.jpg)
-
-编辑/校对/发稿：兰兰
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/JV4_5ME01ZG_5LC@60.png)图片来源：墨尔本雅典娜农场计组
 
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-41.png)
+还有一个最关键是什么？ 兄弟姐妹们，这个申请完破产以后，我们到法庭上我们更有独立的，让法官知道我们为什么申请个人破产，过去的几年七哥被陷害。这对于破产法官来讲，你去想想看看。这个事实在这全摆着呢。其实几个案子，多少被陷害？ 刘延平来美国，就是咱把案子从那个法庭移到这个法庭，完全是个心情，所以战友们一定要学到，这个不是开玩笑的，你一定要了解美国的法律，了解你所在国的法律，这是特别特别重要的。 你说七哥每天吃什么喝什么都是全世界公开的，我拥有的什么都是全世界公开。任何一个战友都比你七哥有钱。所以说，兄弟姐妹们这次的破产案，我很多话还不能说。 因为这个刚才已经来告诉我了，不要在直播中谈那么多破产，我不能喊你们可以谈啊！这个让大家要学到法律是多重要。法律是太重要了。这就是西方和中国的不同。 你们想,我在中国那不知道多少罪弄到我头上去了是吧？ 秒间让你消失在人间，是吧？ 这就是真正的西方的伟大。 你可以有这些法律程序，你可以用法律正义来保护你自己的安全，你自己的利益。 这是我们在西方永远要学到的。 你看看那帮孙子路大脑袋郭宝胜还得意呢，他都不知道他噩梦已经到来，他还不知道。还有一个就是老说我们没钱没人，就像共产党老说美国没钱，美国帝国主义，你不要去美国不就完了吗？特别说共产党，美国那么坏，你要把你们儿女私生子女送到美国干什么？ 就像新中国联邦是骗子，是一帮疯子邪教。你别来不就完了吗？ 别参加不就完了吗？是不是，你说哪有一个不要脸 的人个天天去骂一个比自己过得好的人。碍你什么事儿呢？ 你不去不就完了嘛？碍你个蛋的事儿，你不要来不就好，你不看不就完了，你干嘛看呢？谢谢。
 
+*发布：tianzhihuan*
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
