--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,32 +1,44 @@
 ---
-title: 乌克兰已正式将加密货币合法化
+title: 郭先生发布“解救八孩女”悬赏次日,中共政府宣布重启该案调查
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2030704/)
+`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2030755/)
 
-**编译：Jenny Ball**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip乌克兰已正式将加密货币合法化.png)图片来源：tweaktown.com
-乌克兰这个国家已正式将比特币和其他加密货币合法化。四个月前通过的法案现已签署成为法律。
+作者：纽约香草山农场教育部-—Noemi
 
-乌克兰政府最初于 2021 年 9 月通过了法案，但总统沃洛迪米尔（Volodymyr）要求将其送回议会进行一些修改。四个月后，该法案已正式签署成为法律，现在，代表着通过监管为数字资产所有者、交易所和个人提供保护，迈出了一大步。
 
-乌克兰政府现在预计，随着比特币和其他加密货币的合法化，困扰加密货币行业的邪恶行为，诸如诈骗项目、洗钱、欺诈和其他非法行为等，将大大减少。 此外，预计合法化将在整个领域带来创新，并为那些有兴趣探索新兴技术的人注入信心。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-40.png)
 
-**评论： **
 
-**当文贵先生早在两年前就告诉世界，数字货币的时代即将带来，一定很多人表示怀疑，尤其是见证了比特币的洗清和犯罪行为，更对数字货币望而生畏。但无论人们喜欢与否，数字货币都将是挡不住的历史潮流，尤其是现在看到加拿大政府竟然邪恶到高税盘剥人民劳动价值不说，竟然不顾任何法律随意冻结人们的钱财。更加感叹文贵先生设计的喜币在2021年的11月一日成功上市的巨大历史意义：是人类走向正道主义的根本！没有掌握自己财富安全自由的权利，一切都是徒劳！**
+2022年2月17日中午，中共江苏省委省政府突发通告称：决定立即成立“丰县八孩女子”事件的行动调查组，并向公众承诺会彻底查明事实真相。而就在该公告发出的前一晚，郭文贵先生在大直播节目中发布了一则有关“解救八孩女的”悬赏。此次，中共政府紧急发布的这一通告也许就与郭先生的这则悬赏相关。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/131-1-1.jpg)
+据了解，目前已有很多墙内同胞都自发到达该事件的发生地——中共徐州市，并在当地冒着生命危险为“解救八孩女”一事勇敢发声。郭先生知悉此事后就面向公众再次发出了一则悬赏。郭先生称，在未来，这些敢于为“八孩女”事件发声、发推的正义人士，都将会获得一千乃至一万个不等的喜币奖励。而在该悬赏发出后的不到十二小时里，中共政府就突然成立了一个江苏省级的行动调查组，并声称会彻底查明事实真相，严惩该案件的违法犯罪行为，对有关责任人员进行严肃追责，还会将最终的调查结果及时公布于众。
 
-**乌克兰通过的法律，无疑是明智的政府决策。**
+有盖特网友对此评论称，中共政府此次对于“八孩女”事件的态度急转弯则再次体现出了我们新中国联邦、爆料革命的正义力量。
 
-**新闻来源**：[tweaktown.com][This country officially legalizes Bitcoin and other cryptocurrencies](https://www.tweaktown.com/news/84651/this-country-officially-legalizes-bitcoin-and-other-cryptocurrencies/index.html) **素材**：**文舞**
+参考来源：
 
-* * *
+[https://gtv.org/video/id=620cf40c432ae869226d8db5](https://gtv.org/video/id=620cf40c432ae869226d8db5)
 
-***审核：文乐
-校对：花羽
-发布：信心满满***
+[https://www.gettr.com/post/pv0tis1617](https://www.gettr.com/post/pv0tis1617)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-42.jpg)
 
+编辑/校对/发稿：兰兰
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-41.png)
 
 
  
