--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,16 +1,34 @@
 ---
-title: 渥太华的一名卡车司机问他是否会离开自由车队。请听他充满勇气、决心和韧性的回答。人们觉得他们要捍卫的东西比要失去的东西更多
+title: 乌克兰已正式将加密货币合法化
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030688/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2030704/)
 
-作者：东京樱花团视频小组
+**编译：Jenny Ball**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip乌克兰已正式将加密货币合法化.png)图片来源：tweaktown.com
+乌克兰这个国家已正式将比特币和其他加密货币合法化。四个月前通过的法案现已签署成为法律。
 
-校对：东京樱花团视频小组
+乌克兰政府最初于 2021 年 9 月通过了法案，但总统沃洛迪米尔（Volodymyr）要求将其送回议会进行一些修改。四个月后，该法案已正式签署成为法律，现在，代表着通过监管为数字资产所有者、交易所和个人提供保护，迈出了一大步。
 
-编辑发布：东京樱花团视频小组
+乌克兰政府现在预计，随着比特币和其他加密货币的合法化，困扰加密货币行业的邪恶行为，诸如诈骗项目、洗钱、欺诈和其他非法行为等，将大大减少。 此外，预计合法化将在整个领域带来创新，并为那些有兴趣探索新兴技术的人注入信心。
+
+**评论： **
+
+**当文贵先生早在两年前就告诉世界，数字货币的时代即将带来，一定很多人表示怀疑，尤其是见证了比特币的洗清和犯罪行为，更对数字货币望而生畏。但无论人们喜欢与否，数字货币都将是挡不住的历史潮流，尤其是现在看到加拿大政府竟然邪恶到高税盘剥人民劳动价值不说，竟然不顾任何法律随意冻结人们的钱财。更加感叹文贵先生设计的喜币在2021年的11月一日成功上市的巨大历史意义：是人类走向正道主义的根本！没有掌握自己财富安全自由的权利，一切都是徒劳！**
+
+**乌克兰通过的法律，无疑是明智的政府决策。**
+
+**新闻来源**：[tweaktown.com][This country officially legalizes Bitcoin and other cryptocurrencies](https://www.tweaktown.com/news/84651/this-country-officially-legalizes-bitcoin-and-other-cryptocurrencies/index.html) **素材**：**文舞**
 
 * * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-1.jpg)
+
+***审核：文乐
+校对：花羽
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
