--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,7 +1,7 @@
 ---
-title: 20220201文贵大直播：新中国联邦人永远不要忘记灭共初心
+title: 20220201文贵大直播：中国绝对分高、中、低三等人，也说明了人心开启的不易
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030659/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030689/)
 
 作者：东京樱花团视频小组
 
