--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,29 +1,42 @@
 ---
-title: 中共借“冰墩墩”羞辱新疆人却称那里是人类滑雪起源地
+title: 以色列总理宣布结束疫苗“绿色通行证”
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2030476/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2030550/)
 
-作者：东京樱花团｜捆绑CCP一千年
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1780.png)[*图片来源*](https://www.eurosport.com/alpine-skiing/beijing-2022/2022/winter-olympics-2022-high-winds-delay-start-of-mixed-team-parallel-finals-with-gates-cut-to-improve-_sto8805287/story.shtml)
-**冬奥会即将闭幕，中共欲借“冰墩墩”羞辱新疆人的同时想利用新疆天然雪景打造“冰雪经济”。大外宣疯狂宣传新疆阿拉泰是“人类滑雪起源地”，却不允许冬奥会在新疆举办，因为中共在那里犯下了“反人类罪”。**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2021-04-10T195535Z_1666550298_RC27TM9HDTHU_RTRMADP_3_HEALTH-CORONAVIRUS-ISRAEL-STUDY.jpg)图片来源：Amir Cohen/Reuters
+微软msn网站2月17日报道，以色列总理纳夫塔利·贝内特(Naftali Bennett)宣布，随着感染浪潮的减弱，进入各种场所需要出示中共病毒疫苗接种证明的要求将很快结束。
 
-据中共国新华社19日一则有关新疆的消息中有将“冬奥吉祥物”冰墩墩羞辱新疆人之嫌。该消息称，新疆人买不到“梦中情墩”？咱可以自制、剪纸墩、糖画墩、面人墩等各类新疆分墩上线。
+以色列是推广全国性疫苗接种的早期开拓者，也是首批要求提供疫苗接种证明的国家之一，接种证明被称为绿色通行证，用以进入一系列场所。贝内特周四说，随着中共病毒肺炎严重病例和确诊感染病例的数量明显下降，现在是取消疫苗证明要求的“好时机”。
 
-中共早在2022年2月14日发布了《[北京冬奥组委发布“冰墩墩”使用规范](http://www.news.cn/mrdx/2022-02/14/c_1310469959.htm)》，其中规定商业用途的任何人对“冰墩墩”形象或者名称的使用，都应当遵守《中华人民共和国著作权法》《中华人民共和国商标法》《中华人民共和国专利法》等相关法律法规的规定。至于非商业使用，机关法人、基层群众性自治组织法人、事业单位等非营利法人或者组织可以申请非商业使用北京冬奥会吉祥物“冰墩墩”。申请人按要求填报材料，进行申请。如此一来，组织新疆民众自制“冰墩墩”是不是在自己违反自己的法呢？还是另有企图？
+在过去一年的大部分时间里，绿色通行证一直是以色列生活中的一个固定项目，是进入酒吧、餐馆、酒店、健身房和礼拜等场所的一个要求。虽然该国没有出现影响了许多其他国家的大规模反疫苗抗议活动，但偶尔也有示威活动和沮丧情绪扩大的迹象。
 
-- ***延展阅读：***[***混合团体平行决赛因大风推迟，冬季奥运会赛事改期为周日***](https://www.eurosport.com/alpine-skiing/beijing-2022/2022/winter-olympics-2022-high-winds-delay-start-of-mixed-team-parallel-finals-with-gates-cut-to-improve-_sto8805287/story.shtml)
-- ***延展阅读：***[***联合国秘书长“决心”让人权高官访问新疆***](https://www.voanews.com/a/un-chief-determined-human-rights-chief-visit-xinjiang-/6447739.html)
+周一，数千名以色列人组成反对中共病毒限制的“自由车队”，从全国各地涌入耶路撒冷，这映照了加拿大和世界各地类似的交通堵塞抗议活动。示威者在向以色列政府所在地进发时，按响汽车喇叭，挥舞着加拿大和以色列的国旗。
+
+自去年6月上任以来，贝内特一直承诺将把以色列的经济健康放在应对大流行病的首位，并坚称他不会用严厉的限制来扼杀商业。本月早些时候，他的政府已经开始通过限制必须使用绿色通行证的地点来缩减绿色通行证的要求。
+
+在首次检测到变异毒株奥密克戎的几天后，贝内特下令关闭几乎所有的旅行，说国家需要为即将到来的疫情浪潮做准备。“我们是第一个采取行动并在疫情浪潮来临的时候关闭了空中通道的国家。现在我们正在逐步放开这些限制。”总理在一份声明中说。
+
+**简评**：
+
+郭文贵先生说过，以色列是个聪明的国家。可惜在中共病毒疫苗问题上，以色列却成为了推广全国性疫苗接种的早期开拓者，甚至还实行了强制性的疫苗通行证政策。加拿大的大卡车反疫苗限制令的勇敢抗议活动在世界上引起的蝴蝶效应，也让以色列民众觉醒。以色列总理宣布结束疫苗“绿色通行证”是大势所趋。
+
+这场由中共释放的病毒，演绎成残忍的疫苗危机，在不断爆出的疫苗无效、疫苗有毒的证据面前，政府实施疫苗强制令和疫苗通行证政策，不仅是对人类自由和民主的扼杀，更是在利用伪科学建立类共产主义极权统治的开始。希望全世界有更多的民众觉醒，站出来同新中国联邦集结的正义力量一起揭发毒疫苗的危害，追踪病毒源头，向中国共产党和在此次疫情中强制推行疫苗接种政策的类共产主义极权政府追责。
+
+新闻链接：[https://www.msn.com/en-us/news/world/israel-pm-announces-end-of-vaccine-e2-80-98green-pass-e2-80-99/ar-AAU0bug](https://www.msn.com/en-us/news/world/israel-pm-announces-end-of-vaccine-e2-80-98green-pass-e2-80-99/ar-AAU0bug)
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
 
-该消息认为新疆的阿勒泰是“人类滑雪起源地”，而中共国冬奥会除北京赛区外第二大赛区是河北崇礼，但人们质询，那里既然是中共承认的“滑雪起源地”，为什么不将冬奥会第二或第三赛区设在新疆？对于如此好的天然滑雪资源弃而不用，却选择无雪的北京。从此可见，中共最害怕的就是运动员去新疆。但中共大外宣“[正在利用奥运会进一步宣扬滑雪起源于一万年前的中国](https://www.wsj.com/articles/china-olympics-skiing-11644938615)。”尽管听起来有点荒谬，但更荒谬的说辞是为什么不让运动员去新疆——人类滑雪起源地。
+编辑：【英国伦敦喜庄园编辑部】
 
-对此，环球时报大外宣更是疯狂地认为，是西方媒体不希望新疆乘奥运浪潮成为迪士尼般的度假胜地，是西方媒体不想让[新疆以北京2022冬奥为契机，大力发展旅游、体育、文化等冰雪经济](https://www.globaltimes.cn/page/202202/1251981.shtml)。
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
-2022年2月19日
 
-*校对：东京樱花团/東洋武士*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
