--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,21 +1,22 @@
 ---
-title: 高能警惕！中共变异株疫苗来了，保证药到命除
+title: 20220218文贵大直播：新中国联邦不是为爹亲娘亲不如党亲的人建立的
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2030470/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030481/)
 
-撰稿：东京樱花团｜知了知了
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1779.png)[*图片来源*](http://china.hani.co.kr/arti/international/9895.html)
-2月19日下午，中共国务院联防联控机制举行新闻发布会。会上疫苗研发专班专家组成员邵一鸣介绍，中共病毒（新冠病毒Covid-19）疫苗全程接种能够显著降低奥密克戎变异株引发肺炎和重症的风险，加强免疫则不仅能降低肺炎和重症风险，还能一定程度降低奥密克戎变异株引起的突破感染率。
+作者：东京樱花团视频小组
 
-邵一鸣还介绍，中共国已部署疫苗研发单位开展奥密克戎变异株疫苗研发。一是开展了奥密克戎株的灭活疫苗研究，目前临床前研究已完成；二是开展了针对奥密克戎株的广谱或多价重组蛋白疫苗研究；三是开展了针对奥密克戎株的腺病毒载体疫苗和核酸疫苗研发工作；上述各类疫苗研究工作，进展较快的均已向药品审评中心提交临床试验申报资料。这意味着，变异株疫苗接种即将全面开启。
 
-中共打着“为你好”的名义准备了大型疫苗套餐，灭活疫苗、重组蛋白疫苗、腺病毒载体疫苗、核酸疫苗，一次性满足你对疫苗的所有渴望，保证打伤你、打残你、打死你，药到命除，还不快领旨谢恩！
 
-信息来源：[**我国已部署疫苗研发单位开展奥密克戎变异株疫苗研发**](https://china.huanqiu.com/article/46sfD6b5mXB)
 
-*校对：东京樱花团/東洋武士*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+
+
+
+校对：东京樱花团视频小组
+
+编辑发布：东京樱花团视频小组
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-1.jpg)喜马拉雅东京樱花团
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
