--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,50 +1,21 @@
 ---
-title: 律师：犯下危害人类罪的疫情策划者将面临被起诉
+title: “9066号行政令”颁布80周年 拜登哈里斯寄言
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2030370/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2030451/)
 
-翻译： Jenny Ball
+撰稿：东京樱花团｜麗子
+![](https://assets.gnews.org/wp-content/uploads/2022/02/pasted-image-0-8.png)[*图片来源*](https://blog.goo.ne.jp/chiku39/e/90a1fff8050104c42123adb3fde19b89)
+18日，史密森尼美国历史博物馆等组织举行了一个在线活动，以纪念第9066号行政命令颁布80周年，该命令导致了二战期间对美国境内日裔的监禁。副总统哈里斯称该政策“可耻，是对美国核心价值观的背叛”。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1775.png)图片来源：newstarget.com
+第四代日裔美国人、总统副助理埃里卡-莫里茨格代表拜登总统传达，一个伟大的国家决不能对其惨痛事件视而不见，监禁的历史是种族主义悲剧的一个明显例子，我们必须继续与仇恨作斗争。
 
-那些犯下危害人类罪（包括大屠杀）的瘟疫暴君会不会伸张正义？托马斯·伦茨律师问道。
+珍珠港偷袭直接导致当时罗斯福总统签署了9066号行政令，合法将约12万居住在美国太平洋沿岸的日裔美国人集中囚禁。如今，中共用生化病毒偷袭世界，“3F”美国，真相大白之日，美国又岂能置若罔闻！战友们一定要努力传播真相，让西方人真正区分中共不代表中国，中共不等于中国人。祈祷永远不会有下一个“9066行政令”。
 
-在最近一次与健康护林员迈克·亚当斯（Mike Adams）的《布莱顿对话》中，律师托马斯·伦茨（Thomas Renz）解释说，他和许多其他律师，正准备对那些玷污了我们的生命权、自由权和追求幸福的人近两年的武汉冠状病毒（Covid-19）法西斯主义提起诉讼。
+信息来源：[**副大統領「米の価値観裏切った」日系人収容80年**](https://news.yahoo.co.jp/articles/42b9c3c119c76b771231836f2cb55fd4269670a0)
 
-从封锁到口罩命令，再到现在的**“**疫苗**”**命令，一切都是需要惩罚的犯罪活动，罪犯包括托尼·福奇、罗谢尔·瓦伦斯基、乔·拜登等许多人。
-
-“我们人民永远拥有权力，**”**伦茨在采访中表示。** “**我们一直都有力量，我们将永远拥有力量，不需经其所统治者的同意，任何政府都无法统治人民。**”**
-
-“正如我们人民的立场，他们有多腐败并不重要，因为……如果我们有足够多的人站起来说，’对不起，我们不接受这一点，我们正在改变这一切，’它就会改变。”
-
-几个月来，伦茨一直在就流行病以及围绕它的恐惧和操纵敲警钟。
-
-科学一次又一次地表明，政府为“拉平曲线”而提出的“补救措施”是以控制为中心，而不是为健康。
-
-即使它们确实促进了健康，这些违宪措施也不能违背人们的意愿强加给人们，尤其是当它们带有致命的副作用时，比如疫苗。
-
-此时此刻，世界各地注射过疫苗的人都患上了 VAIDS（疫苗诱发的艾滋病）。由于致命的刺突蛋白淹没了他们的身体，他们中的一些人还患上了癌症。
-
-这些都是战争罪，因为在根除“新冠病毒”的斗争中，例如，政府强迫别无选择的人接种疫苗以保住工作。
-
-“所以，这是一种掩饰，一种欺诈，一种谎言，”伦茨谈到政府现在如何试图隐瞒因疫苗而发生的真实伤亡人数。
-
-对于那些沦为牺牲品的人来说，或者那些觉得他们别无选择只能接受这些攻击的人，这是一个非常不幸的情况。正是为了这些人，伦茨和他的支持者正在为正义而战，并试图阻止这种类型的讽刺再次发生。
-
-“我认为有很多人——我确实认为有同谋——我认为当你掩盖时，我认为这是要负责任的，”伦茨说。
-
-“我认为媒体，大型科技公司，是的，有责任，你猜怎么着：我们是来找你们算账的。到达那一刻可能需要时间，但我们有数百万人将遭受终身健康问题和早逝的痛苦，我想，他们和他们的家人会非常渴望看到那一刻的发生，我们只需要确保告慰他们。”
-
-亚当斯同意他的观点。他设想了这样一个时代，每个从这场种族灭绝中获利的公司的资产都会被没收，而从这场种族灭绝中获利的每家公司的每位负责人、每位经理和每位**CEO **，也会被没收资产。
-
-素材链接：[newstarget.com][Attorney Thomas Renz says prosecutions are coming for the covid plandemic masterminds who committed crimes against humanity](https://www.newstarget.com/2022-02-17-renz-prosecutions-covid-plandemic-masterminds-crimes-humanity.html)
-
-* * *
-
-*审核：文乐
-校对：花羽
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
+*校对：东京樱花团/東洋武士*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
