--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,32 +1,50 @@
 ---
-title: 秘翻在线：渥太华市政当局威胁要夺走自由车队卡车司机的宠物
+title: 律师：犯下危害人类罪的疫情策划者将面临被起诉
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2030274/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2030370/)
 
-**翻译/撰稿：zzballack**
+翻译： Jenny Ball
 
-**校对：人间四月**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-19-175730.jpg)
-据《真正美国之声》（Real America’s Voice）2月19日报道，加拿大当局警告那些抗议新冠强制令的自由车队卡车司机，他们不仅可能因为参加和平示威而被逮捕，而且其宠物还可能被夺走。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1775.png)图片来源：newstarget.com
 
-渥太华的执法和监管部门本周四（2月17日）发推说：“参加示威的动物主人请注意，如果你因参加抗议而无法照顾你的动物，那么它们将被置于保护性照料之下，为期八天，费用由你承担。八天后，如果没有作出安排，那么你的动物将被认为已抛弃。”渥太华市补充说：“《动物看护和控制法》（Animal Care and Control）规定，在主人无法提供照料的情况下，包括被驱逐、被监禁、火灾或医疗紧急情况，由市政府对动物进行临时的’保护性看护’。”
+那些犯下危害人类罪（包括大屠杀）的瘟疫暴君会不会伸张正义？托马斯·伦茨律师问道。
 
-放弃宠物通常意味着动物收容所承担该宠物的所有权，然后等待新主人收养。然而，根据北美最大的非营利性宠物收养网络服务网站Adopt-a-Pet.com的规定，如果动物没有被迅速收养，对其实施安乐死也是一种可能。“当收容所的狗舍空间不足时，有时甚至是健康的、可领养的狗也会被实施安乐死。真实情况是，当你一旦把一只狗给收容所时，狗的情况就完全不在你的掌握之中了。”
+在最近一次与健康护林员迈克·亚当斯（Mike Adams）的《布莱顿对话》中，律师托马斯·伦茨（Thomas Renz）解释说，他和许多其他律师，正准备对那些玷污了我们的生命权、自由权和追求幸福的人近两年的武汉冠状病毒（Covid-19）法西斯主义提起诉讼。
 
-渥太华人道协会表示，当动物“遭受严重或不可治愈的痛苦、因性情不稳定而对公众构成危险或者经专业评估认为在医学上和/或行为上不适合领养时，人道的安乐死被认为是必要的。”一些批评者认为，最后一个理由在本质上是武断的，不应该被实行。
+从封锁到口罩命令，再到现在的**“**疫苗**”**命令，一切都是需要惩罚的犯罪活动，罪犯包括托尼·福奇、罗谢尔·瓦伦斯基、乔·拜登等许多人。
 
-在渥太华宣布可能没收抗议者宠物的同时，警方已经开始逮捕自由车队的领导人。加拿大政府表示，被逮捕的抗议者可能面临长达一年的监禁和10万美元的罚款。到目前为止，抗议者没有实施任何暴力行为，但特鲁多仍拒绝与卡车司机会晤并讨论他们关切的问题。
+“我们人民永远拥有权力，**”**伦茨在采访中表示。** “**我们一直都有力量，我们将永远拥有力量，不需经其所统治者的同意，任何政府都无法统治人民。**”**
 
-**新闻来源：**[Canadian authorities threaten to seize ‘relinquished’ pets of arrested Freedom Convoy truckers](https://americasvoice.news/justthenews/canadian-authorities-may-take-away-euthanize-pets-arrested-freedom/)
+“正如我们人民的立场，他们有多腐败并不重要，因为……如果我们有足够多的人站起来说，’对不起，我们不接受这一点，我们正在改变这一切，’它就会改变。”
 
-关键词：
+几个月来，伦茨一直在就流行病以及围绕它的恐惧和操纵敲警钟。
 
-自由车队卡车司机 宠物 渥太华 疫苗暴政
+科学一次又一次地表明，政府为“拉平曲线”而提出的“补救措施”是以控制为中心，而不是为健康。
 
-摘要：
+即使它们确实促进了健康，这些违宪措施也不能违背人们的意愿强加给人们，尤其是当它们带有致命的副作用时，比如疫苗。
 
-渥太华的执法和监管部门本周四（2月17日）发推说：“参加示威的动物主人请注意，如果你因参加抗议而无法照顾你的动物，那么它们将被置于保护性照料之下，为期八天，费用由你承担。八天后，如果没有作出安排，那么你的动物将被认为是被放弃了。”
+此时此刻，世界各地注射过疫苗的人都患上了 VAIDS（疫苗诱发的艾滋病）。由于致命的刺突蛋白淹没了他们的身体，他们中的一些人还患上了癌症。
 
+这些都是战争罪，因为在根除“新冠病毒”的斗争中，例如，政府强迫别无选择的人接种疫苗以保住工作。
+
+“所以，这是一种掩饰，一种欺诈，一种谎言，”伦茨谈到政府现在如何试图隐瞒因疫苗而发生的真实伤亡人数。
+
+对于那些沦为牺牲品的人来说，或者那些觉得他们别无选择只能接受这些攻击的人，这是一个非常不幸的情况。正是为了这些人，伦茨和他的支持者正在为正义而战，并试图阻止这种类型的讽刺再次发生。
+
+“我认为有很多人——我确实认为有同谋——我认为当你掩盖时，我认为这是要负责任的，”伦茨说。
+
+“我认为媒体，大型科技公司，是的，有责任，你猜怎么着：我们是来找你们算账的。到达那一刻可能需要时间，但我们有数百万人将遭受终身健康问题和早逝的痛苦，我想，他们和他们的家人会非常渴望看到那一刻的发生，我们只需要确保告慰他们。”
+
+亚当斯同意他的观点。他设想了这样一个时代，每个从这场种族灭绝中获利的公司的资产都会被没收，而从这场种族灭绝中获利的每家公司的每位负责人、每位经理和每位**CEO **，也会被没收资产。
+
+素材链接：[newstarget.com][Attorney Thomas Renz says prosecutions are coming for the covid plandemic masterminds who committed crimes against humanity](https://www.newstarget.com/2022-02-17-renz-prosecutions-covid-plandemic-masterminds-crimes-humanity.html)
+
+* * *
+
+*审核：文乐
+校对：花羽
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
