--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,43 +1,40 @@
 ---
-title: 一起中共间谍涉嫌走私军事装备背后的阴谋
+title: 俄乌局势再添变数，顿巴斯停火协议地区民用设施遭炮袭
 ---
-`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/2030852/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2030906/)
 
-#### **【雅典娜观察】和您一起洞察世界**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-315.jpeg)
+撰文：台湾宝岛农场   快慢机
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-316.jpeg)
+当地时间2月17日，乌克兰东部顿巴斯停火协议区内的一所民间幼儿园，在亲俄武装所发起的炮袭行动中被击中。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-314.jpeg)
+据悉，一直驻守在乌克兰东部顿巴斯停火协议区内的欧安组织监督观察人员记录发现，近期在该区域内已经相继接连发生了数起，有关乌克兰政府军与顿巴斯亲俄武装的接触性交火及远程炮袭事件。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-313.jpeg)
+这次在炮袭中受损的乌克兰民间幼儿园，其中一间教室的墙壁被炮弹击穿，但所幸并未造成人员伤亡。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-312.jpeg)
+乌克兰总统泽连斯基随后就2月17日发生的顿巴斯停火协议区内民用幼儿园遭炮袭一事对外界表示，这是该区域亲俄武装对停火协议的“重大挑衅”！
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-311.jpeg)
+然而，顿巴斯地区的亲俄武装则对外宣称，是由于乌克兰政府军此前率先用迫击炮对其锋线阵地实施轰炸后，他们才被迫回应发起炮袭反击。双方各执一词，相互指责违反停火协议错不在己。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-310.jpeg)
+与此同时，俄军一支重装突击力量，正在距离乌克兰首都基辅近在咫尺的，白俄罗斯与乌克兰边境地区“切尔诺贝利”附近完成集结。莫斯科的这一部署显然并未完全放松对乌克兰的军事威慑，反而有随时直取其首都基辅之势。
 
-翻译/编辑：文泓
+反观北约也并未就2月15日，普京下令部分俄乌边境演习部队后撤，所作出的表面性妥协而放松警惕。北约秘书长斯托尔滕贝格仍旧对乌克兰加入北约而不断寻求努力，为应对俄罗斯进一步可能随时采取的激进动作，北约正在考虑向其东南部的罗马尼亚方向增派一支快速反应战斗群，以加强该区域的对俄防御反击能力。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/3-53.png)
+值得一提的是，就在顿巴斯停火协议地区发生炮袭事件，以及北约秘书长对外表示要加强对俄罗斯的激进态势作出及时有效回应的同时，莫斯科方面却突然毫无征兆的作出了，对美国驻俄罗斯副大使“戈尔曼”立即驱逐出境的行动。克里姆林宫此举并不排除是对白宫近期，接连宣称俄军会随时对乌克兰采取突袭行动言论的战术回应。
 
+此文仅代表笔者个人观点！
 
-本周，澳大利亚议会被中共国有影响力指控案件所困扰。周五，昆士兰地方法院审理了64岁的华裔黄金海岸会计师Kim李博伟和63岁的俄罗斯裔布里斯班企业家亚历山大·谢尔被指控违反了澳大利亚《国防贸易管制法》。
+资料链接：[https://www.sohu.com/a/523576991\_123753](https://www.sohu.com/a/523576991_123753)
 
-多方消息来源称，指控源于澳大利亚安全情报组织（ASIO）对一个在澳运作的中共间谍网络的更广泛调查。**早在****2016****年****8****月，澳大利亚官员拦截了一架由澳洲赌场组织的、从黄金海岸飞往新西兰的不寻常的私人飞机航班，就发现了这个网络的成员。**
+[https://www.sohu.com/a/523530652\_260616](https://www.sohu.com/a/523530652_260616)
 
-李先生是该航班上的六名乘客之一。其他乘客包括习近平主席的表弟齐明、墨尔本有组织犯罪头目和赌场旅行团经营者号称唐人街先生周九明，以及另一个被怀疑与中国情报部门有关的人物。
+* * *
 
-由于齐明与习家的关系，以及他与墨尔本的中国犯罪人物和中共特工的关系，而且齐明曾为中兴通讯工作，该公司与中国军工综合体的关系有案可查，ASIO对齐特别关注。
-
-布里斯班地方法院周五听取了李博伟和谢尔被指控与另一名中国公民和前墨尔本商人布莱恩·陈合作，**陈现在躲在海外，是国际刑警组织红色通报的对象。**
-
-ASIO消息人士称，**布莱恩·陈是第一个在澳大利亚被揭发的中共情报嫌疑人员，在****2019****年底也被多家澳洲媒体列入调查的一部分，并公布了陈先生曾试图渗透到澳大利亚议会的指控。**这些报道详细介绍了ASIO的一名线人声称，陈先生曾试图通过扶植维多利亚州自由党成员赵波成为议员，从而在联邦议会安插一名间谍。
-
-2019年，陈成为ASIO强烈关注的对象。在此之前，他住在墨尔本，经营着几家企业。他还被列为几家香港和中国大陆公司的董事和股东，与中国军事采购业有很深的关系。
-
-然而，赵波于2019年3月意外死亡，此前他告诉ASIO官员，陈先生曾向他提供100万澳元，供他竞选联邦议会席位。ASIO官员于2019年3月在墨尔本机场询问了陈先生，但他随后被允许离开澳大利亚。
-
-作为对这些披露的回应，ASIO局长迈克·伯吉斯发表了一份公开声明，称其目前正在“认真对待”有关涉嫌干预阴谋的指控。
-
-新闻链接：[Alexander Cher, Brian Chen accused of smuggling military equipment by AFP (smh.com.au)](https://www.smh.com.au/national/afp-uncovers-suspected-chinese-spy-s-alleged-plot-to-smuggle-military-equipment-20220218-p59xld.html)
-
-*发布：tianzhihuan*
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+***更多资讯***
+[台湾农场精彩文章](https://gnews.org/zh-hant/author/taiwangnews/)
+[台湾农场精彩直播影片](https://gtv.org/user/5f60d588245d3c0579acdbec)
+[订阅台湾宝岛农场官方YOUTUBE频道](https://www.youtube.com/channel/UCXlInG8cGCHSN5y54zcgoOw/videos)
+[点击此处加入「台湾宝岛农场」Discord伺服器](https://discord.gg/zE5xTQzArt)
 
  
 
